// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`redraw render snapshot of a medium map renders the loaded map 1`] = `
{
  "canvas": "28810db0a92b",
  "topic 0": "pos=0,0 size=123x42 order=undefined group=31b0cded508b line=da39a3ee5e6b",
  "topic 1": "pos=127,-358.5 size=71x38 order=0 group=694223b8f0ba line=73486457fe69",
  "topic 10": "pos=345.5,-336 size=86x34 order=0 group=1a64fc1d9011 line=6491fa4aae55",
  "topic 11": "pos=362.5,-279.5 size=120x59 order=1 group=c4366dce4060 line=ddc66526841e",
  "topic 12": "pos=244.5,-201 size=104x47 order=2 group=6d110f75ffff line=25af9412bf95",
  "topic 13": "pos=429.5,-223 size=206x34 order=0 group=bb29f66b7ede line=53028d0d099d",
  "topic 14": "pos=361,-179 size=69x34 order=1 group=135f07e0c011 line=8574a22699a7",
  "topic 15": "pos=-139.5,-368.5 size=96x74 order=1 group=ade6a209cb6f line=0fe7a9057ae3",
  "topic 16": "pos=-269.5,-469 size=104x47 order=0 group=52fc5a560789 line=4eff09257dd8",
  "topic 17": "pos=-386,-519.5 size=69x34 order=0 group=76695af6180e line=6d034ddf4767",
  "topic 18": "pos=-403,-447 size=103x34 order=1 group=ca416794b037 line=4bf5c9da92b1",
  "topic 19": "pos=-519,-475.5 size=69x34 order=0 group=4b624460c254 line=0b0b254e4fb7",
  "topic 2": "pos=224,-459 size=63x34 order=0 group=0c07ca952e7c line=d108c69ff446",
  "topic 20": "pos=-536.5,-425 size=104x47 order=1 group=8df124e66c0a line=a171d1dfc199",
  "topic 21": "pos=-252,-340 size=69x34 order=1 group=e30228718471 line=66b491781c64",
  "topic 22": "pos=-376.5,-362 size=120x59 order=0 group=419b50d892f3 line=3d4b2be60e28",
  "topic 23": "pos=-419.5,-305.5 size=206x34 order=1 group=950a18651e0a line=4b97ba984d47",
  "topic 24": "pos=-278,-239.5 size=121x47 order=2 group=ee442a3cb9b9 line=8c613142863f",
  "topic 25": "pos=-411.5,-261.5 size=86x34 order=0 group=8e00b249bf15 line=773a23f4e32d",
  "topic 26": "pos=-403,-217.5 size=69x34 order=1 group=9334f3adfb16 line=3ab9e603737b",
  "topic 27": "pos=139.5,28.5 size=96x38 order=2 group=db04a62d2d49 line=abf4b39d0631",
  "topic 28": "pos=261,-84.5 size=87x47 order=0 group=92acb32177ca line=484d2717b4dd",
  "topic 29": "pos=369,-135 size=69x34 order=0 group=d562b87c402f line=18a145e67fda",
  "topic 3": "pos=385.5,-509.5 size=200x34 order=0 group=b08fa23ea8c1 line=e714c935824d",
  "topic 30": "pos=386,-62.5 size=103x34 order=1 group=d40a7827d209 line=e9663aef0307",
  "topic 31": "pos=502,-91 size=69x34 order=0 group=749a22bd3a82 line=908787b09a96",
  "topic 32": "pos=519.5,-40.5 size=104x47 order=1 group=d1770db14d18 line=cbb8fa46dc71",
  "topic 33": "pos=396.5,57 size=358x59 order=1 group=057ba96a16aa line=d19710f92be3",
  "topic 34": "pos=665.5,22.5 size=120x59 order=0 group=70de1ea67429 line=78cafb8a9b82",
  "topic 35": "pos=680.5,91.5 size=150x59 order=1 group=b4a6181f4279 line=004493112ee4",
  "topic 36": "pos=278,170 size=121x47 order=2 group=d3871068f19e line=75df98395f11",
  "topic 37": "pos=403,148 size=69x34 order=0 group=2394d555887d line=67c623fb24c1",
  "topic 38": "pos=403,192 size=69x34 order=1 group=2b07750b9a86 line=9428f20117dd",
  "topic 39": "pos=-130.5,-17.5 size=78x38 order=3 group=19da1726b08b line=06189dff9758",
  "topic 4": "pos=559,-531.5 size=87x47 order=0 group=07fc08428bbe line=08c8bcac7db2",
  "topic 40": "pos=-260,-105.5 size=121x47 order=0 group=6492880b3588 line=92ce4158efdf",
  "topic 41": "pos=-385,-173.5 size=69x34 order=0 group=5360955359b8 line=b7d94ee7d94a",
  "topic 42": "pos=-393.5,-83.5 size=86x34 order=1 group=80c18b143b18 line=07c0831ad6ac",
  "topic 43": "pos=-569.5,-129.5 size=206x34 order=0 group=876e463f9424 line=9f0c7e057f0b",
  "topic 44": "pos=-542,-61.5 size=151x82 order=1 group=8085ed304ac1 line=24f028f876f6",
  "topic 45": "pos=-251,28.5 size=103x34 order=1 group=16be70e621be line=64e1acb0ec94",
  "topic 46": "pos=-367,6.5 size=69x34 order=0 group=d86ecc0c361d line=379deddefa96",
  "topic 47": "pos=-367,50.5 size=69x34 order=1 group=d69e626c2052 line=33f28a338148",
  "topic 48": "pos=-260,116.5 size=121x47 order=2 group=262cfe6bd4b6 line=79842eefe96c",
  "topic 49": "pos=-385,94.5 size=69x34 order=0 group=220f3d2bf454 line=bbe856f54ac1",
  "topic 5": "pos=555.5,-481 size=80x34 order=1 group=2ad76018527d line=a346059ae60a",
  "topic 50": "pos=-393.5,138.5 size=86x34 order=1 group=5b7b967410b7 line=fc2823a22fd1",
  "topic 500": "pos=600,500 size=69x34 order=undefined group=2b507e91f8ee line=da39a3ee5e6b",
  "topic 51": "pos=130.5,387 size=78x38 order=4 group=ae1a436c9be0 line=c7fc2c7f128e",
  "topic 52": "pos=243,299 size=87x47 order=0 group=a24b52f3d0c8 line=a89314fada7e",
  "topic 53": "pos=419.5,236 size=206x34 order=0 group=0b0384088d7e line=ce251f704daa",
  "topic 54": "pos=368,321 size=103x34 order=1 group=9b6b2a65fbb8 line=9b9c1f434aa3",
  "topic 55": "pos=524.5,292.5 size=150x59 order=0 group=2a2dc0db3a0d line=656d6bc8f44e",
  "topic 56": "pos=501.5,355.5 size=104x47 order=1 group=8e2f628aa685 line=8d25a9d1f3fe",
  "topic 57": "pos=234,428 size=69x34 order=1 group=511c7b8760e1 line=149e8781e168",
  "topic 58": "pos=333,406 size=69x34 order=0 group=f6d16a2fa970 line=ef2a70c14acf",
  "topic 59": "pos=333,450 size=69x34 order=1 group=95bdc8c37e91 line=3d8c05d3582f",
  "topic 6": "pos=325.5,-408.5 size=80x34 order=1 group=009ee2f1d758 line=6b11ac129a31",
  "topic 60": "pos=260,516 size=121x47 order=2 group=1824b343e026 line=1e3267232a86",
  "topic 61": "pos=385,494 size=69x34 order=0 group=4d2141ab7e37 line=3a266e91a179",
  "topic 62": "pos=385,538 size=69x34 order=1 group=9d31f6bdef48 line=4dbe640fd654",
  "topic 63": "pos=-216,351 size=249x38 order=5 group=b20f463aae4b line=80a20fa71669",
  "topic 64": "pos=-422.5,263 size=104x47 order=0 group=8a792b0d6c4f line=07f539aab19f",
  "topic 65": "pos=-547.5,182.5 size=86x34 order=0 group=615bf0aae251 line=1dfb2c8a995a",
  "topic 66": "pos=-579.5,285 size=150x59 order=1 group=1837dd972122 line=2e011b7fc959",
  "topic 67": "pos=-744.5,239 size=120x59 order=0 group=782c74cab6c4 line=9ae3246c3ad0",
  "topic 68": "pos=-760,319.5 size=151x82 order=1 group=4eb0d17ace25 line=6e0bfb673447",
  "topic 69": "pos=-405,409.5 size=69x34 order=1 group=7e1912011bdf line=1012fd675dd8",
  "topic 7": "pos=427,-437 size=63x34 order=0 group=bd1d124e1bfc line=0e58f4315250",
  "topic 70": "pos=-512.5,387.5 size=86x34 order=0 group=cf93793ebe07 line=be66ca4b7035",
  "topic 71": "pos=-504,431.5 size=69x34 order=1 group=38435c091752 line=ca40c4edd52f",
  "topic 72": "pos=-439.5,497.5 size=138x47 order=2 group=4ece8450d354 line=f342825376f5",
  "topic 73": "pos=-641.5,475.5 size=206x34 order=0 group=88abfc810e04 line=e0b2e1b26408",
  "topic 74": "pos=-573,519.5 size=69x34 order=1 group=9e09df3f8943 line=d47b49308a13",
  "topic 8": "pos=447.5,-386.5 size=104x47 order=1 group=d64d7e44327b line=a32848cd2412",
  "topic 9": "pos=232.5,-301.5 size=80x64 order=1 group=10dbf5e4a3ca line=606a614b8f3e",
}
`;

exports[`redraw render snapshot of a medium map renders the same after changing the theme: prism 1`] = `
{
  "canvas": "690c80b8ee47",
  "topic 0": "pos=0,0 size=123x42 order=undefined group=77dbc125755d line=da39a3ee5e6b",
  "topic 1": "pos=154.5,-358.5 size=126x68 order=0 group=8bfa7f94a2fb line=0c84999458f2",
  "topic 10": "pos=572.5,-315.5 size=272x68 order=0 group=c2a0d93df96d line=afbd5146efe5",
  "topic 11": "pos=496.5,-216.5 size=120x110 order=1 group=31c29d8fa57d line=9471854abcdd",
  "topic 12": "pos=350.5,-78.5 size=206x93 order=2 group=fb2027cd368d line=51354e615c06",
  "topic 13": "pos=688,-117.5 size=409x68 order=0 group=9b923275f730 line=c88ffcd3ef3a",
  "topic 14": "pos=552,-39.5 size=137x68 order=1 group=14216e856eed line=6b134b66afca",
  "topic 15": "pos=139.5,172.5 size=96x74 order=2 group=1bb8a8ad61a1 line=9152036100d7",
  "topic 16": "pos=269.5,72 size=104x47 order=0 group=82303eed630d line=43dbb2bf7abe",
  "topic 17": "pos=386,21.5 size=69x34 order=0 group=1911c9ca1135 line=dd5e4e337536",
  "topic 18": "pos=403,94 size=103x34 order=1 group=cccdec14b77b line=32f25926eb69",
  "topic 19": "pos=519,65.5 size=69x34 order=0 group=06d0296cd048 line=9ea4f5eb7e8d",
  "topic 2": "pos=375.5,-535.5 size=256x93 order=0 group=cc8ab20af027 line=282958cf3d75",
  "topic 20": "pos=536.5,116 size=104x47 order=1 group=6e8a747714b7 line=6160b7467588",
  "topic 21": "pos=252,201 size=69x34 order=1 group=1930e7652336 line=73135ceb4c70",
  "topic 22": "pos=376.5,179 size=120x59 order=0 group=cdad5d4937f7 line=4ddfa92e9c1d",
  "topic 23": "pos=419.5,235.5 size=206x34 order=1 group=ca2cc81d8c27 line=1cbab79e9c54",
  "topic 24": "pos=278,301.5 size=121x47 order=2 group=095046f98969 line=ad8a46e7c810",
  "topic 25": "pos=411.5,279.5 size=86x34 order=0 group=47f13c44bbe3 line=56272b13fca5",
  "topic 26": "pos=403,323.5 size=69x34 order=1 group=d7d21413da35 line=f7b83f3038a6",
  "topic 27": "pos=139.5,531 size=96x38 order=4 group=0dddcccbba14 line=98b87ad9fa1d",
  "topic 28": "pos=261,418 size=87x47 order=0 group=e14e5679e74e line=fdb2792dbb81",
  "topic 29": "pos=369,367.5 size=69x34 order=0 group=84b6f9663352 line=a2908590133f",
  "topic 3": "pos=673,-626 size=279x68 order=0 group=0d4078c6fbb7 line=edc090e7a40a",
  "topic 30": "pos=386,440 size=103x34 order=1 group=a175dffce79c line=9aecd3ffe203",
  "topic 31": "pos=502,411.5 size=69x34 order=0 group=7afc312ec43b line=2540a4cc8d2f",
  "topic 32": "pos=519.5,462 size=104x47 order=1 group=e747e02234fa line=ca3d90f74e56",
  "topic 33": "pos=396.5,559.5 size=358x59 order=1 group=3cbc216e86eb line=14bdfeebe2ae",
  "topic 34": "pos=665.5,525 size=120x59 order=0 group=b8e9326b684c line=4547ea0c2039",
  "topic 35": "pos=680.5,594 size=150x59 order=1 group=a9322c75846a line=3f36d3c103b4",
  "topic 36": "pos=278,672.5 size=121x47 order=2 group=3fe1ad5bec09 line=1e4a7836d5b1",
  "topic 37": "pos=403,650.5 size=69x34 order=0 group=2901030c9863 line=9a7927051db3",
  "topic 38": "pos=403,694.5 size=69x34 order=1 group=094120b9d147 line=0f28f64b8164",
  "topic 39": "pos=-130.5,-363.5 size=78x38 order=1 group=be051b3e8a23 line=cc66df009a50",
  "topic 4": "pos=929,-665 size=173x93 order=0 group=eddf286af0bb line=890c64d643ce",
  "topic 40": "pos=-260,-451.5 size=121x47 order=0 group=4cf0e029be6e line=60d5da9905a3",
  "topic 41": "pos=-385,-519.5 size=69x34 order=0 group=7ab3600e5dc4 line=4a3b4ea606db",
  "topic 42": "pos=-393.5,-429.5 size=86x34 order=1 group=54424e672ca9 line=9a513f033d96",
  "topic 43": "pos=-569.5,-475.5 size=206x34 order=0 group=677fc0ed109e line=dd4d33239ed6",
  "topic 44": "pos=-542,-407.5 size=151x82 order=1 group=b401589c6fb3 line=959c44beb8df",
  "topic 45": "pos=-251,-317.5 size=103x34 order=1 group=b536319afa91 line=7e9d7d87da75",
  "topic 46": "pos=-367,-339.5 size=69x34 order=0 group=8603d22a5ba5 line=b17ad5a716e4",
  "topic 47": "pos=-367,-295.5 size=69x34 order=1 group=6a8eeb034427 line=9bc74f4a1b9f",
  "topic 48": "pos=-260,-229.5 size=121x47 order=2 group=af7484ba16bf line=2a333e186dbb",
  "topic 49": "pos=-385,-251.5 size=69x34 order=0 group=f77207f1f828 line=86503d6a1d51",
  "topic 5": "pos=922,-574.5 size=159x68 order=1 group=3e86f85e0a19 line=a1991ccf74f8",
  "topic 50": "pos=-393.5,-207.5 size=86x34 order=1 group=e8bfda7596d1 line=8061c0772511",
  "topic 500": "pos=600,500 size=69x34 order=undefined group=2b507e91f8ee line=da39a3ee5e6b",
  "topic 51": "pos=-130.5,-12.5 size=78x38 order=3 group=5932d16fbecd line=ccc208abfcf0",
  "topic 52": "pos=-243,-100.5 size=87x47 order=0 group=318a9ce7a20d line=ff4a03cdd900",
  "topic 53": "pos=-419.5,-163.5 size=206x34 order=0 group=6d770050c959 line=13507c068a9b",
  "topic 54": "pos=-368,-78.5 size=103x34 order=1 group=857df793f3ed line=c227293af4f9",
  "topic 55": "pos=-524.5,-107 size=150x59 order=0 group=e3cf87452e78 line=03f921cbad34",
  "topic 56": "pos=-501.5,-44 size=104x47 order=1 group=6048f601b6f4 line=6950a5557ad5",
  "topic 57": "pos=-234,28.5 size=69x34 order=1 group=a5e53789ff57 line=b3a2e70958f1",
  "topic 58": "pos=-333,6.5 size=69x34 order=0 group=6c733ad8f1c1 line=c69286210e1b",
  "topic 59": "pos=-333,50.5 size=69x34 order=1 group=91a0564fa18c line=10ed586fc828",
  "topic 6": "pos=613,-445 size=159x68 order=1 group=2c9373b0f13c line=d28a334f2a78",
  "topic 60": "pos=-260,116.5 size=121x47 order=2 group=c62ee87d6700 line=7a6dc35c8506",
  "topic 61": "pos=-385,94.5 size=69x34 order=0 group=f030acc0899b line=6756b0838f90",
  "topic 62": "pos=-385,138.5 size=69x34 order=1 group=299a494904e2 line=b4dd9e227be1",
  "topic 63": "pos=-216,351 size=249x38 order=5 group=969fedc5de53 line=98f29da89068",
  "topic 64": "pos=-422.5,263 size=104x47 order=0 group=0935d4aa2543 line=64b42a723d11",
  "topic 65": "pos=-547.5,182.5 size=86x34 order=0 group=e6cbceae21e2 line=42e8ea805edc",
  "topic 66": "pos=-579.5,285 size=150x59 order=1 group=4452b3f65a1a line=ea262ce7c944",
  "topic 67": "pos=-744.5,239 size=120x59 order=0 group=3ba37545ffa3 line=786f24eaa527",
  "topic 68": "pos=-760,319.5 size=151x82 order=1 group=07a22d89cfff line=16e3375562d6",
  "topic 69": "pos=-405,409.5 size=69x34 order=1 group=3435bb05132f line=d170a7d899ca",
  "topic 7": "pos=785.5,-496.5 size=126x68 order=0 group=8a2d71d0fffc line=63fd03cf3430",
  "topic 70": "pos=-512.5,387.5 size=86x34 order=0 group=01ec470d3f97 line=be66ca4b7035",
  "topic 71": "pos=-504,431.5 size=69x34 order=1 group=87bf9e55efb9 line=ca40c4edd52f",
  "topic 72": "pos=-439.5,497.5 size=138x47 order=2 group=53eafab5ec35 line=0001ec936b9f",
  "topic 73": "pos=-641.5,475.5 size=206x34 order=0 group=531fdbc1ec39 line=21a83375c7f5",
  "topic 74": "pos=-573,519.5 size=69x34 order=1 group=624b9f63626a line=d0956081015d",
  "topic 8": "pos=825.5,-406 size=206x93 order=1 group=3cc8d3d2d29a line=d4796982939f",
  "topic 9": "pos=327,-255.5 size=159x125 order=1 group=2606bc0edd9c line=770d56413c1f",
}
`;

exports[`redraw render snapshot of a medium map renders the same after changing the theme: prism dark 1`] = `
{
  "canvas": "c0718523502e",
  "topic 0": "pos=0,0 size=123x42 order=undefined group=d0b6922e04e2 line=da39a3ee5e6b",
  "topic 1": "pos=154.5,-358.5 size=126x68 order=0 group=8bfa7f94a2fb line=bb96e6d0312e",
  "topic 10": "pos=572.5,-315.5 size=272x68 order=0 group=05b1e77fce38 line=77340f404032",
  "topic 11": "pos=496.5,-216.5 size=120x110 order=1 group=31c29d8fa57d line=56c2c6058a68",
  "topic 12": "pos=350.5,-78.5 size=206x93 order=2 group=604e646914f9 line=527bf452d000",
  "topic 13": "pos=688,-117.5 size=409x68 order=0 group=b86fc87a9f89 line=c3fc3a79d61e",
  "topic 14": "pos=552,-39.5 size=137x68 order=1 group=8368284e441d line=ffaf467bf992",
  "topic 15": "pos=139.5,172.5 size=96x74 order=2 group=0048a8f54ef8 line=0b67d190941f",
  "topic 16": "pos=269.5,72 size=104x47 order=0 group=a79145fe1c58 line=d6b8123481e4",
  "topic 17": "pos=386,21.5 size=69x34 order=0 group=b39fc8cde3c6 line=3b0ea0b77ac9",
  "topic 18": "pos=403,94 size=103x34 order=1 group=5b36c4cd3080 line=a33f347a8bba",
  "topic 19": "pos=519,65.5 size=69x34 order=0 group=c124b630e588 line=9ea4f5eb7e8d",
  "topic 2": "pos=375.5,-535.5 size=256x93 order=0 group=04b9a3381e98 line=d9c5b9876bd5",
  "topic 20": "pos=536.5,116 size=104x47 order=1 group=80fe4b0be83f line=091457121af2",
  "topic 21": "pos=252,201 size=69x34 order=1 group=e9d4828c92e7 line=1d40ce1c3c17",
  "topic 22": "pos=376.5,179 size=120x59 order=0 group=f31c6a3d726b line=379866a7ab4b",
  "topic 23": "pos=419.5,235.5 size=206x34 order=1 group=3c6a414f946b line=c32f9a9cd6f8",
  "topic 24": "pos=278,301.5 size=121x47 order=2 group=4bdf21c995c4 line=3d6cd2e958ee",
  "topic 25": "pos=411.5,279.5 size=86x34 order=0 group=6a5d63556b4b line=0f9425741079",
  "topic 26": "pos=403,323.5 size=69x34 order=1 group=1efa42f0adca line=453cd39d6eb8",
  "topic 27": "pos=139.5,531 size=96x38 order=4 group=7553c61c1340 line=cd715a689315",
  "topic 28": "pos=261,418 size=87x47 order=0 group=9f2707057814 line=8dc44c144e8c",
  "topic 29": "pos=369,367.5 size=69x34 order=0 group=6f65a247c579 line=4206916e28fc",
  "topic 3": "pos=673,-626 size=279x68 order=0 group=4da87f359cbe line=936816f6b319",
  "topic 30": "pos=386,440 size=103x34 order=1 group=21ab3b195fa6 line=5d70b86bd974",
  "topic 31": "pos=502,411.5 size=69x34 order=0 group=9bc988be119c line=3458cb5ef854",
  "topic 32": "pos=519.5,462 size=104x47 order=1 group=48b39c6f571c line=91616d199bf6",
  "topic 33": "pos=396.5,559.5 size=358x59 order=1 group=3a6a68bcbabd line=0d698bc25ce8",
  "topic 34": "pos=665.5,525 size=120x59 order=0 group=b8e9326b684c line=ece951965acc",
  "topic 35": "pos=680.5,594 size=150x59 order=1 group=3e3bd5c7a419 line=6f94c6300304",
  "topic 36": "pos=278,672.5 size=121x47 order=2 group=c3c22104a3d6 line=2d446be2f919",
  "topic 37": "pos=403,650.5 size=69x34 order=0 group=2da075bb0694 line=861ac6467754",
  "topic 38": "pos=403,694.5 size=69x34 order=1 group=5a842b7fcf1e line=0f28f64b8164",
  "topic 39": "pos=-130.5,-363.5 size=78x38 order=1 group=20110fbfa0b4 line=2f7927ac08af",
  "topic 4": "pos=929,-665 size=173x93 order=0 group=75ecab50ce0e line=df24e01a4832",
  "topic 40": "pos=-260,-451.5 size=121x47 order=0 group=9178afee27b5 line=fa5877baceec",
  "topic 41": "pos=-385,-519.5 size=69x34 order=0 group=faee11c34cae line=37b5d4e78304",
  "topic 42": "pos=-393.5,-429.5 size=86x34 order=1 group=9f7fab6979fc line=e9a9572daf85",
  "topic 43": "pos=-569.5,-475.5 size=206x34 order=0 group=19a5c1d4aea2 line=5294e25f8f80",
  "topic 44": "pos=-542,-407.5 size=151x82 order=1 group=8f0724270a3b line=4563601df7ad",
  "topic 45": "pos=-251,-317.5 size=103x34 order=1 group=3ec4238520d2 line=573564863e31",
  "topic 46": "pos=-367,-339.5 size=69x34 order=0 group=f73a92615235 line=8aa579127bf5",
  "topic 47": "pos=-367,-295.5 size=69x34 order=1 group=2f5c1294837a line=495095a17a4e",
  "topic 48": "pos=-260,-229.5 size=121x47 order=2 group=8bf64aabb49f line=f0df66cad235",
  "topic 49": "pos=-385,-251.5 size=69x34 order=0 group=aaa80dc7c276 line=04a9b2bb344a",
  "topic 5": "pos=922,-574.5 size=159x68 order=1 group=889ec19df409 line=d6705ef963e0",
  "topic 50": "pos=-393.5,-207.5 size=86x34 order=1 group=091e271e019c line=8556125f0d9f",
  "topic 500": "pos=600,500 size=69x34 order=undefined group=2b507e91f8ee line=da39a3ee5e6b",
  "topic 51": "pos=-130.5,-12.5 size=78x38 order=3 group=5932d16fbecd line=b60de39952ac",
  "topic 52": "pos=-243,-100.5 size=87x47 order=0 group=5a057e482300 line=b63a108241bc",
  "topic 53": "pos=-419.5,-163.5 size=206x34 order=0 group=32caaee85a78 line=008cf71d4813",
  "topic 54": "pos=-368,-78.5 size=103x34 order=1 group=f05148687ae7 line=98588c58720d",
  "topic 55": "pos=-524.5,-107 size=150x59 order=0 group=e3cf87452e78 line=7bcb30d757bd",
  "topic 56": "pos=-501.5,-44 size=104x47 order=1 group=a8beac2ced99 line=5c01148f35b5",
  "topic 57": "pos=-234,28.5 size=69x34 order=1 group=640f5ac2572f line=b3a2e70958f1",
  "topic 58": "pos=-333,6.5 size=69x34 order=0 group=6d47daacee88 line=c69286210e1b",
  "topic 59": "pos=-333,50.5 size=69x34 order=1 group=1e1c537fec0e line=10ed586fc828",
  "topic 6": "pos=613,-445 size=159x68 order=1 group=6c5e3bfd1399 line=f62c3a949811",
  "topic 60": "pos=-260,116.5 size=121x47 order=2 group=7cc3c0012234 line=7b801382ab35",
  "topic 61": "pos=-385,94.5 size=69x34 order=0 group=4ff5c3e0bd73 line=894e1bcdab82",
  "topic 62": "pos=-385,138.5 size=69x34 order=1 group=ddf183092236 line=5ab87138eb05",
  "topic 63": "pos=-216,351 size=249x38 order=5 group=8c7d3166d529 line=a8ff4898763a",
  "topic 64": "pos=-422.5,263 size=104x47 order=0 group=8a12175c5fbb line=e2ab8ce65e1c",
  "topic 65": "pos=-547.5,182.5 size=86x34 order=0 group=190cb3e491b0 line=62de5f13506e",
  "topic 66": "pos=-579.5,285 size=150x59 order=1 group=5beec3d9ee9d line=c4ed9630377a",
  "topic 67": "pos=-744.5,239 size=120x59 order=0 group=074db1f27dc8 line=4c0900da29da",
  "topic 68": "pos=-760,319.5 size=151x82 order=1 group=07a22d89cfff line=8555c5e99482",
  "topic 69": "pos=-405,409.5 size=69x34 order=1 group=2163597aa36d line=2b07dac40493",
  "topic 7": "pos=785.5,-496.5 size=126x68 order=0 group=b67928db321c line=bc4970b34654",
  "topic 70": "pos=-512.5,387.5 size=86x34 order=0 group=9df7736815fa line=a699d9fef98a",
  "topic 71": "pos=-504,431.5 size=69x34 order=1 group=e9fecac1db42 line=9b917332cb31",
  "topic 72": "pos=-439.5,497.5 size=138x47 order=2 group=7ffa5f9d5cc3 line=f5053eba8876",
  "topic 73": "pos=-641.5,475.5 size=206x34 order=0 group=3cccf37b09c2 line=6af651494b80",
  "topic 74": "pos=-573,519.5 size=69x34 order=1 group=03edcc2744ba line=e560b7db881d",
  "topic 8": "pos=825.5,-406 size=206x93 order=1 group=6311e56ee2d0 line=a77f94b279d9",
  "topic 9": "pos=327,-255.5 size=159x125 order=1 group=54acc469274c line=e8b5fe97453e",
}
`;

exports[`redraw render snapshot of a medium map renders the same after style, feature and image changes: styled 1`] = `
{
  "canvas": "597ad143be7e",
  "topic 0": "pos=0,0 size=123x42 order=undefined group=31b0cded508b line=da39a3ee5e6b",
  "topic 1": "pos=154.5,-358.5 size=126x68 order=0 group=2e2617a5178a line=a051b803eb95",
  "topic 10": "pos=572.5,-315.5 size=272x68 order=0 group=9800abec1526 line=656e55ec490d",
  "topic 11": "pos=496.5,-216.5 size=120x110 order=1 group=4949fdafb2c0 line=d915ae1c715e",
  "topic 12": "pos=350.5,-78.5 size=206x93 order=2 group=33fce70fac7a line=b799379f19e3",
  "topic 13": "pos=688,-117.5 size=409x68 order=0 group=e5521c9de3b0 line=dfd6783612ec",
  "topic 14": "pos=552,-39.5 size=137x68 order=1 group=f57e8e83f813 line=d36412cd3429",
  "topic 15": "pos=139.5,172.5 size=96x74 order=2 group=41f4bc7a92e8 line=8d8ecf9d7448",
  "topic 16": "pos=269.5,72 size=104x47 order=0 group=848ed11a2222 line=edb63bc81019",
  "topic 17": "pos=386,21.5 size=69x34 order=0 group=59ad64673bb9 line=23986bee2991",
  "topic 18": "pos=403,94 size=103x34 order=1 group=16c57e60b3e8 line=fd49d6100783",
  "topic 19": "pos=519,65.5 size=69x34 order=0 group=3c2cddcb5b1a line=6dfd250aae8c",
  "topic 2": "pos=375.5,-535.5 size=256x93 order=0 group=b3226ba47435 line=9867b5deddd7",
  "topic 20": "pos=536.5,116 size=104x47 order=1 group=6287aa2d43f7 line=f67046ee075b",
  "topic 21": "pos=252,201 size=69x34 order=1 group=1b4a792e8d6b line=f1b9fa226d64",
  "topic 22": "pos=376.5,179 size=120x59 order=0 group=c0fbb69cae49 line=1cdcbd3a023b",
  "topic 23": "pos=419.5,235.5 size=206x34 order=1 group=a5fb7ff98bde line=a6fe09ae7041",
  "topic 24": "pos=278,301.5 size=121x47 order=2 group=97a689c77139 line=22d2559b06e1",
  "topic 25": "pos=411.5,279.5 size=86x34 order=0 group=154c93dc90d2 line=4b01337d3ee4",
  "topic 26": "pos=403,323.5 size=69x34 order=1 group=a3c86385f07f line=1c888e5fe1e5",
  "topic 27": "pos=139.5,531 size=96x38 order=4 group=01917987f8b3 line=82f9070d67d9",
  "topic 28": "pos=261,418 size=87x47 order=0 group=f06e0d7629f7 line=a5bfc6f03880",
  "topic 29": "pos=369,367.5 size=69x34 order=0 group=161e926002b1 line=6da8dc22379f",
  "topic 3": "pos=673,-626 size=279x68 order=0 group=3095d1d9374d line=fca8a46c734e",
  "topic 30": "pos=386,440 size=103x34 order=1 group=50f7d18348fc line=a48e1d38ff3f",
  "topic 31": "pos=502,411.5 size=69x34 order=0 group=851f38c17829 line=2d8d61ab6518",
  "topic 32": "pos=519.5,462 size=104x47 order=1 group=0b02715bace8 line=867a5184ab6a",
  "topic 33": "pos=396.5,559.5 size=358x59 order=1 group=7e52689f77b4 line=259d31b50f3f",
  "topic 34": "pos=665.5,525 size=120x59 order=0 group=8a7167f2ebb8 line=d999d9a8cb06",
  "topic 35": "pos=680.5,594 size=150x59 order=1 group=744a7574c1e1 line=d508b1d7ca95",
  "topic 36": "pos=278,672.5 size=121x47 order=2 group=fec35170e057 line=c58912344ceb",
  "topic 37": "pos=403,650.5 size=69x34 order=0 group=7250e6a1417d line=daa1671e5ec9",
  "topic 38": "pos=403,694.5 size=69x34 order=1 group=639231274c53 line=cbb12f42d2d8",
  "topic 39": "pos=-130.5,-363.5 size=78x38 order=1 group=ffd8bab64811 line=c80c763f6b44",
  "topic 4": "pos=929,-665 size=173x93 order=0 group=3fae3f066225 line=48057e6148df",
  "topic 40": "pos=-260,-451.5 size=121x47 order=0 group=a8912b390658 line=fe731b955e22",
  "topic 41": "pos=-385,-519.5 size=69x34 order=0 group=b6380e65cb89 line=b970b6d06c78",
  "topic 42": "pos=-393.5,-429.5 size=86x34 order=1 group=34a4452483de line=994b871f040a",
  "topic 43": "pos=-569.5,-475.5 size=206x34 order=0 group=5facdd8cd421 line=aa9fde11fa61",
  "topic 44": "pos=-542,-407.5 size=151x82 order=1 group=1fb55f5b7632 line=5f52dbfa4cc9",
  "topic 45": "pos=-251,-317.5 size=103x34 order=1 group=654c287ddb82 line=b28d5ef14bda",
  "topic 46": "pos=-367,-339.5 size=69x34 order=0 group=b9e0edf34cac line=b4651071d978",
  "topic 47": "pos=-367,-295.5 size=69x34 order=1 group=bf6e7a4dde46 line=0979d9a799c6",
  "topic 48": "pos=-260,-229.5 size=121x47 order=2 group=a8362d9399ae line=65019caca6dd",
  "topic 49": "pos=-385,-251.5 size=69x34 order=0 group=460ef35fc265 line=ac516c8aef4b",
  "topic 5": "pos=922,-574.5 size=159x68 order=1 group=778af6b7665d line=b7623f7c5bbc",
  "topic 50": "pos=-393.5,-207.5 size=86x34 order=1 group=05f538a517fa line=adf1c8aab403",
  "topic 500": "pos=600,500 size=69x34 order=undefined group=2b507e91f8ee line=da39a3ee5e6b",
  "topic 51": "pos=-130.5,-12.5 size=78x38 order=3 group=313bdd74ed9d line=6cc1d9f5e8a9",
  "topic 52": "pos=-243,-100.5 size=87x47 order=0 group=ada936c770df line=98f97abfc7b2",
  "topic 53": "pos=-419.5,-163.5 size=206x34 order=0 group=5c56f9dcc6a1 line=3dfce46097ba",
  "topic 54": "pos=-368,-78.5 size=103x34 order=1 group=627c418390e8 line=72c9816b0d39",
  "topic 55": "pos=-524.5,-107 size=150x59 order=0 group=43dfae4b3109 line=9f2138376c57",
  "topic 56": "pos=-501.5,-44 size=104x47 order=1 group=2521a9caf5dd line=2e418fc822d4",
  "topic 57": "pos=-234,28.5 size=69x34 order=1 group=b1e71cdea12d line=f4533bc67df3",
  "topic 58": "pos=-333,6.5 size=69x34 order=0 group=97cdced574e7 line=5ce9916f3b11",
  "topic 59": "pos=-333,50.5 size=69x34 order=1 group=6b53764477dc line=05d7fbd4808f",
  "topic 6": "pos=613,-445 size=159x68 order=1 group=1f819530a4c4 line=ec5a62d40ddb",
  "topic 60": "pos=-260,116.5 size=121x47 order=2 group=88d5c396b0a9 line=e59c31fa78f8",
  "topic 61": "pos=-385,94.5 size=69x34 order=0 group=05e8da57cd9b line=00446c0e5922",
  "topic 62": "pos=-385,138.5 size=69x34 order=1 group=327459a9dc9b line=fc2823a22fd1",
  "topic 63": "pos=-216,351 size=249x38 order=5 group=b20f463aae4b line=80a20fa71669",
  "topic 64": "pos=-422.5,263 size=104x47 order=0 group=8a792b0d6c4f line=07f539aab19f",
  "topic 65": "pos=-547.5,182.5 size=86x34 order=0 group=615bf0aae251 line=1dfb2c8a995a",
  "topic 66": "pos=-579.5,285 size=150x59 order=1 group=1837dd972122 line=2e011b7fc959",
  "topic 67": "pos=-744.5,239 size=120x59 order=0 group=782c74cab6c4 line=9ae3246c3ad0",
  "topic 68": "pos=-760,319.5 size=151x82 order=1 group=4eb0d17ace25 line=6e0bfb673447",
  "topic 69": "pos=-405,409.5 size=69x34 order=1 group=7e1912011bdf line=1012fd675dd8",
  "topic 7": "pos=785.5,-496.5 size=126x68 order=0 group=4dce6eddd75a line=25c4bf46cadc",
  "topic 70": "pos=-512.5,387.5 size=86x34 order=0 group=cf93793ebe07 line=be66ca4b7035",
  "topic 71": "pos=-504,431.5 size=69x34 order=1 group=38435c091752 line=ca40c4edd52f",
  "topic 72": "pos=-439.5,497.5 size=138x47 order=2 group=4ece8450d354 line=f342825376f5",
  "topic 73": "pos=-641.5,475.5 size=206x34 order=0 group=88abfc810e04 line=e0b2e1b26408",
  "topic 74": "pos=-573,519.5 size=69x34 order=1 group=9e09df3f8943 line=d47b49308a13",
  "topic 8": "pos=825.5,-406 size=206x93 order=1 group=738fe170cce3 line=f7e69ed85401",
  "topic 9": "pos=327,-255.5 size=159x125 order=1 group=8b1729464ec3 line=ecbb32f32569",
}
`;

exports[`redraw render snapshot of a medium map renders the same after switching to the tree layout and back: mindmap 1`] = `
{
  "canvas": "780f2a6ab18e",
  "topic 0": "pos=0,0 size=123x42 order=undefined group=31b0cded508b line=da39a3ee5e6b",
  "topic 1": "pos=127,-358.5 size=71x38 order=0 group=694223b8f0ba line=73486457fe69",
  "topic 10": "pos=345.5,-336 size=86x34 order=0 group=1a64fc1d9011 line=6491fa4aae55",
  "topic 11": "pos=362.5,-279.5 size=120x59 order=1 group=c4366dce4060 line=ddc66526841e",
  "topic 12": "pos=244.5,-201 size=104x47 order=2 group=6d110f75ffff line=25af9412bf95",
  "topic 13": "pos=429.5,-223 size=206x34 order=0 group=bb29f66b7ede line=53028d0d099d",
  "topic 14": "pos=361,-179 size=69x34 order=1 group=135f07e0c011 line=8574a22699a7",
  "topic 15": "pos=139.5,16 size=96x74 order=2 group=e1d6275420ff line=3d2913cc88bd",
  "topic 16": "pos=269.5,-84.5 size=104x47 order=0 group=03b4891c6fac line=de5d7714eb41",
  "topic 17": "pos=386,-135 size=69x34 order=0 group=d2c7b79c2078 line=c50b7a380f4e",
  "topic 18": "pos=403,-62.5 size=103x34 order=1 group=70d8803fb5d5 line=38d593fc549c",
  "topic 19": "pos=519,-91 size=69x34 order=0 group=0051323de508 line=da0bf20a8508",
  "topic 2": "pos=224,-459 size=63x34 order=0 group=0c07ca952e7c line=d108c69ff446",
  "topic 20": "pos=536.5,-40.5 size=104x47 order=1 group=8c34cd2ef5af line=7e0f38d42177",
  "topic 21": "pos=252,44.5 size=69x34 order=1 group=43fb1f13c536 line=3c50a5b9700a",
  "topic 22": "pos=376.5,22.5 size=120x59 order=0 group=f640ec9dcef6 line=0224651a05b1",
  "topic 23": "pos=419.5,79 size=206x34 order=1 group=a7ace6535c0f line=d8bd9e684d76",
  "topic 24": "pos=278,145 size=121x47 order=2 group=1662b67591a3 line=25c3958b8679",
  "topic 25": "pos=411.5,123 size=86x34 order=0 group=ae346347e29c line=64f7b46932a0",
  "topic 26": "pos=403,167 size=69x34 order=1 group=41c0af20b43b line=4ba4b0eca8ed",
  "topic 27": "pos=139.5,374.5 size=96x38 order=4 group=05cb1e8ef1d2 line=77fb832b455a",
  "topic 28": "pos=261,261.5 size=87x47 order=0 group=b5e42a129f00 line=823cfe77f0f8",
  "topic 29": "pos=369,211 size=69x34 order=0 group=b6422233b3a6 line=8f105703b178",
  "topic 3": "pos=385.5,-509.5 size=200x34 order=0 group=b08fa23ea8c1 line=e714c935824d",
  "topic 30": "pos=386,283.5 size=103x34 order=1 group=463f4773cec4 line=1a5ca46a5393",
  "topic 31": "pos=502,255 size=69x34 order=0 group=d70d9dcf87aa line=168225236460",
  "topic 32": "pos=519.5,305.5 size=104x47 order=1 group=a52df76a00de line=61996460fb89",
  "topic 33": "pos=396.5,403 size=358x59 order=1 group=abf9a5c7791b line=eb0e8defb960",
  "topic 34": "pos=665.5,368.5 size=120x59 order=0 group=a069dc8f1e7b line=fe61fe3424ae",
  "topic 35": "pos=680.5,437.5 size=150x59 order=1 group=b5fa22e1003c line=b26c7f697add",
  "topic 36": "pos=278,516 size=121x47 order=2 group=65949bdf4d83 line=6647961e8ec0",
  "topic 37": "pos=403,494 size=69x34 order=0 group=43e0fff0cd87 line=0e71c6e40e64",
  "topic 38": "pos=403,538 size=69x34 order=1 group=b01fb7115912 line=147712eee351",
  "topic 39": "pos=-130.5,-363.5 size=78x38 order=1 group=ffd8bab64811 line=c80c763f6b44",
  "topic 4": "pos=559,-531.5 size=87x47 order=0 group=07fc08428bbe line=08c8bcac7db2",
  "topic 40": "pos=-260,-451.5 size=121x47 order=0 group=a8912b390658 line=fe731b955e22",
  "topic 41": "pos=-385,-519.5 size=69x34 order=0 group=b6380e65cb89 line=b970b6d06c78",
  "topic 42": "pos=-393.5,-429.5 size=86x34 order=1 group=34a4452483de line=994b871f040a",
  "topic 43": "pos=-569.5,-475.5 size=206x34 order=0 group=5facdd8cd421 line=aa9fde11fa61",
  "topic 44": "pos=-542,-407.5 size=151x82 order=1 group=1fb55f5b7632 line=5f52dbfa4cc9",
  "topic 45": "pos=-251,-317.5 size=103x34 order=1 group=654c287ddb82 line=b28d5ef14bda",
  "topic 46": "pos=-367,-339.5 size=69x34 order=0 group=b9e0edf34cac line=b4651071d978",
  "topic 47": "pos=-367,-295.5 size=69x34 order=1 group=bf6e7a4dde46 line=0979d9a799c6",
  "topic 48": "pos=-260,-229.5 size=121x47 order=2 group=a8362d9399ae line=65019caca6dd",
  "topic 49": "pos=-385,-251.5 size=69x34 order=0 group=460ef35fc265 line=ac516c8aef4b",
  "topic 5": "pos=555.5,-481 size=80x34 order=1 group=2ad76018527d line=a346059ae60a",
  "topic 50": "pos=-393.5,-207.5 size=86x34 order=1 group=05f538a517fa line=adf1c8aab403",
  "topic 500": "pos=600,500 size=69x34 order=undefined group=2b507e91f8ee line=da39a3ee5e6b",
  "topic 51": "pos=-130.5,-12.5 size=78x38 order=3 group=313bdd74ed9d line=6cc1d9f5e8a9",
  "topic 52": "pos=-243,-100.5 size=87x47 order=0 group=ada936c770df line=98f97abfc7b2",
  "topic 53": "pos=-419.5,-163.5 size=206x34 order=0 group=5c56f9dcc6a1 line=3dfce46097ba",
  "topic 54": "pos=-368,-78.5 size=103x34 order=1 group=627c418390e8 line=72c9816b0d39",
  "topic 55": "pos=-524.5,-107 size=150x59 order=0 group=43dfae4b3109 line=9f2138376c57",
  "topic 56": "pos=-501.5,-44 size=104x47 order=1 group=2521a9caf5dd line=2e418fc822d4",
  "topic 57": "pos=-234,28.5 size=69x34 order=1 group=b1e71cdea12d line=f4533bc67df3",
  "topic 58": "pos=-333,6.5 size=69x34 order=0 group=97cdced574e7 line=5ce9916f3b11",
  "topic 59": "pos=-333,50.5 size=69x34 order=1 group=6b53764477dc line=05d7fbd4808f",
  "topic 6": "pos=325.5,-408.5 size=80x34 order=1 group=009ee2f1d758 line=6b11ac129a31",
  "topic 60": "pos=-260,116.5 size=121x47 order=2 group=88d5c396b0a9 line=e59c31fa78f8",
  "topic 61": "pos=-385,94.5 size=69x34 order=0 group=05e8da57cd9b line=00446c0e5922",
  "topic 62": "pos=-385,138.5 size=69x34 order=1 group=327459a9dc9b line=fc2823a22fd1",
  "topic 63": "pos=-216,351 size=249x38 order=5 group=b20f463aae4b line=80a20fa71669",
  "topic 64": "pos=-422.5,263 size=104x47 order=0 group=8a792b0d6c4f line=07f539aab19f",
  "topic 65": "pos=-547.5,182.5 size=86x34 order=0 group=615bf0aae251 line=1dfb2c8a995a",
  "topic 66": "pos=-579.5,285 size=150x59 order=1 group=1837dd972122 line=2e011b7fc959",
  "topic 67": "pos=-744.5,239 size=120x59 order=0 group=782c74cab6c4 line=9ae3246c3ad0",
  "topic 68": "pos=-760,319.5 size=151x82 order=1 group=4eb0d17ace25 line=6e0bfb673447",
  "topic 69": "pos=-405,409.5 size=69x34 order=1 group=7e1912011bdf line=1012fd675dd8",
  "topic 7": "pos=427,-437 size=63x34 order=0 group=bd1d124e1bfc line=0e58f4315250",
  "topic 70": "pos=-512.5,387.5 size=86x34 order=0 group=cf93793ebe07 line=be66ca4b7035",
  "topic 71": "pos=-504,431.5 size=69x34 order=1 group=38435c091752 line=ca40c4edd52f",
  "topic 72": "pos=-439.5,497.5 size=138x47 order=2 group=4ece8450d354 line=f342825376f5",
  "topic 73": "pos=-641.5,475.5 size=206x34 order=0 group=88abfc810e04 line=e0b2e1b26408",
  "topic 74": "pos=-573,519.5 size=69x34 order=1 group=9e09df3f8943 line=d47b49308a13",
  "topic 8": "pos=447.5,-386.5 size=104x47 order=1 group=d64d7e44327b line=a32848cd2412",
  "topic 9": "pos=232.5,-301.5 size=80x64 order=1 group=10dbf5e4a3ca line=606a614b8f3e",
}
`;

exports[`redraw render snapshot of a medium map renders the same after switching to the tree layout and back: tree 1`] = `
{
  "canvas": "29e44420ca30",
  "topic 0": "pos=0,0 size=123x42 order=undefined group=31b0cded508b line=da39a3ee5e6b",
  "topic 1": "pos=-2021.5,110 size=71x38 order=0 group=dffc69cb0bda line=543bf1a100e4",
  "topic 10": "pos=-2035.5,350 size=86x34 order=0 group=3c611883b3cf line=cb01c4de0525",
  "topic 11": "pos=-1922.5,362.5 size=120x59 order=1 group=ce205d729969 line=6b5982ae9784",
  "topic 12": "pos=-1710,222.5 size=104x47 order=2 group=10ee1141d4e4 line=f52c709f5521",
  "topic 13": "pos=-1749.5,333 size=206x34 order=0 group=67b499773ea0 line=c7d64a601805",
  "topic 14": "pos=-1602,333 size=69x34 order=1 group=771a96edefae line=548941c5e190",
  "topic 15": "pos=-1166,128 size=96x74 order=1 group=3e641e0a0d7c line=41289b521a06",
  "topic 16": "pos=-1426.5,258.5 size=104x47 order=0 group=6efd946123b9 line=e69322ded376",
  "topic 17": "pos=-1523,369 size=69x34 order=0 group=a3d55a429757 line=e05246f978b7",
  "topic 18": "pos=-1387,369 size=103x34 order=1 group=63eef6e1788e line=083ebf692887",
  "topic 19": "pos=-1444,473 size=69x34 order=0 group=8f5f59992c47 line=cab432562f60",
  "topic 2": "pos=-2282,216 size=63x34 order=0 group=0e7a7e699121 line=4a8acfc72496",
  "topic 20": "pos=-1347.5,479.5 size=104x47 order=1 group=c5ccbd837551 line=e071459fdeeb",
  "topic 21": "pos=-1117.5,252 size=69x34 order=1 group=c6cbdf8f0a2a line=573315b24bba",
  "topic 22": "pos=-1225.5,368.5 size=120x59 order=0 group=74c78e5bc1fc line=8e1280da54e1",
  "topic 23": "pos=-1052.5,356 size=206x34 order=1 group=350e054f90e8 line=6e2f33f896f4",
  "topic 24": "pos=-857,258.5 size=121x47 order=2 group=5b76f6192feb line=0cef4ee6471e",
  "topic 25": "pos=-896.5,369 size=86x34 order=0 group=c839892c9702 line=eff8aa1bccf4",
  "topic 26": "pos=-809,369 size=69x34 order=1 group=662d1404159e line=1a8073a5ea95",
  "topic 27": "pos=-370.5,110 size=96x38 order=2 group=943786099183 line=6718c96d1830",
  "topic 28": "pos=-633.5,222.5 size=87x47 order=0 group=daa635fdbc45 line=31bfe8168a60",
  "topic 29": "pos=-730,333 size=69x34 order=0 group=83fc4ae03948 line=13b8424aaeb0",
  "topic 3": "pos=-2375.5,320 size=200x34 order=0 group=cc25ac0e64a5 line=07ba16cc4325",
  "topic 30": "pos=-594,333 size=103x34 order=1 group=24e88ba4e0ef line=7090035f56d3",
  "topic 31": "pos=-651,437 size=69x34 order=0 group=76824ae8215d line=7ef21423a471",
  "topic 32": "pos=-554.5,443.5 size=104x47 order=1 group=aca35890dd45 line=da12edf00421",
  "topic 33": "pos=-313.5,228.5 size=358x59 order=1 group=456c8c591cbe line=08ef5cd50cee",
  "topic 34": "pos=-393.5,357.5 size=120x59 order=0 group=61c55803d032 line=b6956daf639e",
  "topic 35": "pos=-248.5,357.5 size=150x59 order=1 group=fa87bf17be7a line=805a694f1049",
  "topic 36": "pos=-50.5,222.5 size=121x47 order=2 group=2caae2398cdd line=361f77bc9ae7",
  "topic 37": "pos=-90,333 size=69x34 order=0 group=3b7d7d14a33f line=b71413c7a847",
  "topic 38": "pos=-11,333 size=69x34 order=1 group=399768517be8 line=9eca7cc58602",
  "topic 39": "pos=423,110 size=78x38 order=3 group=7c02b95c7870 line=ca53b9f9b235",
  "topic 4": "pos=-2420.5,430.5 size=87x47 order=0 group=af6710193468 line=31b61b975661",
  "topic 40": "pos=256.5,222.5 size=121x47 order=0 group=13f884647a8f line=b8c62e5a5d2b",
  "topic 41": "pos=68,333 size=69x34 order=0 group=972458b8c528 line=1eca168f2844",
  "topic 42": "pos=296,333 size=86x34 order=1 group=75a94568bd4a line=3f60af9d41ab",
  "topic 43": "pos=215.5,437 size=206x34 order=0 group=06abac8f0aea line=c4e3dd3b2283",
  "topic 44": "pos=404,461 size=151x82 order=1 group=c0cb8e169ad2 line=7a9296ab5a5b",
  "topic 45": "pos=563.5,216 size=103x34 order=1 group=7c54b2ba8911 line=2683a156863d",
  "topic 46": "pos=524,320 size=69x34 order=0 group=ead77d9c77e7 line=cf5206434b7a",
  "topic 47": "pos=603,320 size=69x34 order=1 group=3ad433983a0b line=539dc02d2621",
  "topic 48": "pos=730,222.5 size=121x47 order=2 group=6944f97cbe56 line=527bd2e87d63",
  "topic 49": "pos=682,333 size=69x34 order=0 group=795db01031fe line=2bf84e783537",
  "topic 5": "pos=-2327,424 size=80x34 order=1 group=70a058db8335 line=be7ea73d40fb",
  "topic 50": "pos=769.5,333 size=86x34 order=1 group=a81f7da3ec65 line=692cf17389df",
  "topic 500": "pos=600,500 size=69x34 order=undefined group=2b507e91f8ee line=da39a3ee5e6b",
  "topic 51": "pos=1220.5,110 size=78x38 order=4 group=b1a5da34ac7c line=bdc3cf8e4106",
  "topic 52": "pos=1062.5,222.5 size=87x47 order=0 group=eff7ee9f2723 line=8bcbd9d052e2",
  "topic 53": "pos=925.5,333 size=206x34 order=0 group=a169c9e5b53b line=fc2c13652bc7",
  "topic 54": "pos=1170.5,333 size=103x34 order=1 group=78529efbc87d line=ae4fb679bf1b",
  "topic 55": "pos=1113.5,449.5 size=150x59 order=0 group=124503a58b7f line=a6fc0ff2c7b6",
  "topic 56": "pos=1250.5,443.5 size=104x47 order=1 group=f2593e4906a2 line=3bc00ca01394",
  "topic 57": "pos=1386.5,216 size=69x34 order=1 group=62cca714ae50 line=a1173cf8b250",
  "topic 58": "pos=1347,320 size=69x34 order=0 group=0afc6b621478 line=9c3773ab0ecc",
  "topic 59": "pos=1426,320 size=69x34 order=1 group=0d7c03349748 line=66b810f4be3e",
  "topic 6": "pos=-2177,320 size=80x34 order=1 group=1e9f4a2709be line=2f0fd589d0af",
  "topic 60": "pos=1544.5,222.5 size=121x47 order=2 group=b2ef2f1cde1f line=c7a95b3dc7f0",
  "topic 61": "pos=1505,333 size=69x34 order=0 group=ef6f14475cad line=4bd50bf0c2d6",
  "topic 62": "pos=1584,333 size=69x34 order=1 group=bfbe66da0275 line=3efebb767b24",
  "topic 63": "pos=2052,110 size=249x38 order=5 group=2739ca60db97 line=06d888c3e123",
  "topic 64": "pos=1817,222.5 size=104x47 order=0 group=7a446fd3915e line=d26f4bd571dd",
  "topic 65": "pos=1671.5,333 size=86x34 order=0 group=8fc9b466251d line=b0ae1e482362",
  "topic 66": "pos=1865,345.5 size=150x59 order=1 group=ffca488c8501 line=d43f3083b92b",
  "topic 67": "pos=1784.5,474.5 size=120x59 order=0 group=b095bc73fb00 line=e230f328ae7e",
  "topic 68": "pos=1930,486 size=151x82 order=1 group=6ef96b7e717d line=9aeb879f4f84",
  "topic 69": "pos=2098,216 size=69x34 order=1 group=8402f2ba007d line=5e65ac975df3",
  "topic 7": "pos=-2234,424 size=63x34 order=0 group=685240fcf25d line=a2869e6540e2",
  "topic 70": "pos=2058.5,320 size=86x34 order=0 group=2d8e707299a5 line=04564374381d",
  "topic 71": "pos=2146,320 size=69x34 order=1 group=da76f01c8409 line=81fd48905b80",
  "topic 72": "pos=2333,222.5 size=138x47 order=2 group=1c040554782e line=8783fe1445b0",
  "topic 73": "pos=2293.5,333 size=206x34 order=0 group=c8aa150441ae line=43d0a323e679",
  "topic 74": "pos=2441,333 size=69x34 order=1 group=19d53b81058d line=6cd7562e2e5c",
  "topic 8": "pos=-2140.5,430.5 size=104x47 order=1 group=24a659d2004c line=49b24a9bd813",
  "topic 9": "pos=-1970.5,231 size=80x64 order=1 group=a8e09e40216f line=2dbc15158ac5",
}
`;

exports[`redraw render snapshot of a medium map renders the same after toggling the theme variant: dark 1`] = `
{
  "canvas": "e677d5bb66ed",
  "topic 0": "pos=0,0 size=123x42 order=undefined group=31b0cded508b line=da39a3ee5e6b",
  "topic 1": "pos=127,-358.5 size=71x38 order=0 group=694223b8f0ba line=73486457fe69",
  "topic 10": "pos=345.5,-336 size=86x34 order=0 group=1a64fc1d9011 line=6491fa4aae55",
  "topic 11": "pos=362.5,-279.5 size=120x59 order=1 group=c4366dce4060 line=ddc66526841e",
  "topic 12": "pos=244.5,-201 size=104x47 order=2 group=6d110f75ffff line=25af9412bf95",
  "topic 13": "pos=429.5,-223 size=206x34 order=0 group=bb29f66b7ede line=53028d0d099d",
  "topic 14": "pos=361,-179 size=69x34 order=1 group=135f07e0c011 line=8574a22699a7",
  "topic 15": "pos=139.5,16 size=96x74 order=2 group=e1d6275420ff line=3d2913cc88bd",
  "topic 16": "pos=269.5,-84.5 size=104x47 order=0 group=03b4891c6fac line=de5d7714eb41",
  "topic 17": "pos=386,-135 size=69x34 order=0 group=d2c7b79c2078 line=c50b7a380f4e",
  "topic 18": "pos=403,-62.5 size=103x34 order=1 group=70d8803fb5d5 line=38d593fc549c",
  "topic 19": "pos=519,-91 size=69x34 order=0 group=0051323de508 line=da0bf20a8508",
  "topic 2": "pos=224,-459 size=63x34 order=0 group=0c07ca952e7c line=d108c69ff446",
  "topic 20": "pos=536.5,-40.5 size=104x47 order=1 group=8c34cd2ef5af line=7e0f38d42177",
  "topic 21": "pos=252,44.5 size=69x34 order=1 group=43fb1f13c536 line=3c50a5b9700a",
  "topic 22": "pos=376.5,22.5 size=120x59 order=0 group=f640ec9dcef6 line=0224651a05b1",
  "topic 23": "pos=419.5,79 size=206x34 order=1 group=a7ace6535c0f line=d8bd9e684d76",
  "topic 24": "pos=278,145 size=121x47 order=2 group=1662b67591a3 line=25c3958b8679",
  "topic 25": "pos=411.5,123 size=86x34 order=0 group=ae346347e29c line=64f7b46932a0",
  "topic 26": "pos=403,167 size=69x34 order=1 group=41c0af20b43b line=4ba4b0eca8ed",
  "topic 27": "pos=139.5,374.5 size=96x38 order=4 group=05cb1e8ef1d2 line=77fb832b455a",
  "topic 28": "pos=261,261.5 size=87x47 order=0 group=b5e42a129f00 line=823cfe77f0f8",
  "topic 29": "pos=369,211 size=69x34 order=0 group=b6422233b3a6 line=8f105703b178",
  "topic 3": "pos=385.5,-509.5 size=200x34 order=0 group=b08fa23ea8c1 line=e714c935824d",
  "topic 30": "pos=386,283.5 size=103x34 order=1 group=463f4773cec4 line=1a5ca46a5393",
  "topic 31": "pos=502,255 size=69x34 order=0 group=d70d9dcf87aa line=168225236460",
  "topic 32": "pos=519.5,305.5 size=104x47 order=1 group=a52df76a00de line=61996460fb89",
  "topic 33": "pos=396.5,403 size=358x59 order=1 group=abf9a5c7791b line=eb0e8defb960",
  "topic 34": "pos=665.5,368.5 size=120x59 order=0 group=a069dc8f1e7b line=fe61fe3424ae",
  "topic 35": "pos=680.5,437.5 size=150x59 order=1 group=b5fa22e1003c line=b26c7f697add",
  "topic 36": "pos=278,516 size=121x47 order=2 group=65949bdf4d83 line=6647961e8ec0",
  "topic 37": "pos=403,494 size=69x34 order=0 group=43e0fff0cd87 line=0e71c6e40e64",
  "topic 38": "pos=403,538 size=69x34 order=1 group=b01fb7115912 line=147712eee351",
  "topic 39": "pos=-130.5,-363.5 size=78x38 order=1 group=ffd8bab64811 line=c80c763f6b44",
  "topic 4": "pos=559,-531.5 size=87x47 order=0 group=07fc08428bbe line=08c8bcac7db2",
  "topic 40": "pos=-260,-451.5 size=121x47 order=0 group=a8912b390658 line=fe731b955e22",
  "topic 41": "pos=-385,-519.5 size=69x34 order=0 group=b6380e65cb89 line=b970b6d06c78",
  "topic 42": "pos=-393.5,-429.5 size=86x34 order=1 group=34a4452483de line=994b871f040a",
  "topic 43": "pos=-569.5,-475.5 size=206x34 order=0 group=5facdd8cd421 line=aa9fde11fa61",
  "topic 44": "pos=-542,-407.5 size=151x82 order=1 group=1fb55f5b7632 line=5f52dbfa4cc9",
  "topic 45": "pos=-251,-317.5 size=103x34 order=1 group=654c287ddb82 line=b28d5ef14bda",
  "topic 46": "pos=-367,-339.5 size=69x34 order=0 group=b9e0edf34cac line=b4651071d978",
  "topic 47": "pos=-367,-295.5 size=69x34 order=1 group=bf6e7a4dde46 line=0979d9a799c6",
  "topic 48": "pos=-260,-229.5 size=121x47 order=2 group=a8362d9399ae line=65019caca6dd",
  "topic 49": "pos=-385,-251.5 size=69x34 order=0 group=460ef35fc265 line=ac516c8aef4b",
  "topic 5": "pos=555.5,-481 size=80x34 order=1 group=2ad76018527d line=a346059ae60a",
  "topic 50": "pos=-393.5,-207.5 size=86x34 order=1 group=05f538a517fa line=adf1c8aab403",
  "topic 500": "pos=600,500 size=69x34 order=undefined group=2b507e91f8ee line=da39a3ee5e6b",
  "topic 51": "pos=-130.5,-12.5 size=78x38 order=3 group=313bdd74ed9d line=6cc1d9f5e8a9",
  "topic 52": "pos=-243,-100.5 size=87x47 order=0 group=ada936c770df line=98f97abfc7b2",
  "topic 53": "pos=-419.5,-163.5 size=206x34 order=0 group=5c56f9dcc6a1 line=3dfce46097ba",
  "topic 54": "pos=-368,-78.5 size=103x34 order=1 group=627c418390e8 line=72c9816b0d39",
  "topic 55": "pos=-524.5,-107 size=150x59 order=0 group=43dfae4b3109 line=9f2138376c57",
  "topic 56": "pos=-501.5,-44 size=104x47 order=1 group=2521a9caf5dd line=2e418fc822d4",
  "topic 57": "pos=-234,28.5 size=69x34 order=1 group=b1e71cdea12d line=f4533bc67df3",
  "topic 58": "pos=-333,6.5 size=69x34 order=0 group=97cdced574e7 line=5ce9916f3b11",
  "topic 59": "pos=-333,50.5 size=69x34 order=1 group=6b53764477dc line=05d7fbd4808f",
  "topic 6": "pos=325.5,-408.5 size=80x34 order=1 group=009ee2f1d758 line=6b11ac129a31",
  "topic 60": "pos=-260,116.5 size=121x47 order=2 group=88d5c396b0a9 line=e59c31fa78f8",
  "topic 61": "pos=-385,94.5 size=69x34 order=0 group=05e8da57cd9b line=00446c0e5922",
  "topic 62": "pos=-385,138.5 size=69x34 order=1 group=327459a9dc9b line=fc2823a22fd1",
  "topic 63": "pos=-216,351 size=249x38 order=5 group=b20f463aae4b line=80a20fa71669",
  "topic 64": "pos=-422.5,263 size=104x47 order=0 group=8a792b0d6c4f line=07f539aab19f",
  "topic 65": "pos=-547.5,182.5 size=86x34 order=0 group=615bf0aae251 line=1dfb2c8a995a",
  "topic 66": "pos=-579.5,285 size=150x59 order=1 group=1837dd972122 line=2e011b7fc959",
  "topic 67": "pos=-744.5,239 size=120x59 order=0 group=782c74cab6c4 line=9ae3246c3ad0",
  "topic 68": "pos=-760,319.5 size=151x82 order=1 group=4eb0d17ace25 line=6e0bfb673447",
  "topic 69": "pos=-405,409.5 size=69x34 order=1 group=7e1912011bdf line=1012fd675dd8",
  "topic 7": "pos=427,-437 size=63x34 order=0 group=bd1d124e1bfc line=0e58f4315250",
  "topic 70": "pos=-512.5,387.5 size=86x34 order=0 group=cf93793ebe07 line=be66ca4b7035",
  "topic 71": "pos=-504,431.5 size=69x34 order=1 group=38435c091752 line=ca40c4edd52f",
  "topic 72": "pos=-439.5,497.5 size=138x47 order=2 group=4ece8450d354 line=f342825376f5",
  "topic 73": "pos=-641.5,475.5 size=206x34 order=0 group=88abfc810e04 line=e0b2e1b26408",
  "topic 74": "pos=-573,519.5 size=69x34 order=1 group=9e09df3f8943 line=d47b49308a13",
  "topic 8": "pos=447.5,-386.5 size=104x47 order=1 group=d64d7e44327b line=a32848cd2412",
  "topic 9": "pos=232.5,-301.5 size=80x64 order=1 group=10dbf5e4a3ca line=606a614b8f3e",
}
`;

exports[`redraw render snapshot of a medium map renders the same after toggling the theme variant: initialized dark 1`] = `
{
  "canvas": "e677d5bb66ed",
  "topic 0": "pos=0,0 size=123x42 order=undefined group=31b0cded508b line=da39a3ee5e6b",
  "topic 1": "pos=127,-358.5 size=71x38 order=0 group=694223b8f0ba line=73486457fe69",
  "topic 10": "pos=345.5,-336 size=86x34 order=0 group=1a64fc1d9011 line=6491fa4aae55",
  "topic 11": "pos=362.5,-279.5 size=120x59 order=1 group=c4366dce4060 line=ddc66526841e",
  "topic 12": "pos=244.5,-201 size=104x47 order=2 group=6d110f75ffff line=25af9412bf95",
  "topic 13": "pos=429.5,-223 size=206x34 order=0 group=bb29f66b7ede line=53028d0d099d",
  "topic 14": "pos=361,-179 size=69x34 order=1 group=135f07e0c011 line=8574a22699a7",
  "topic 15": "pos=139.5,16 size=96x74 order=2 group=e1d6275420ff line=3d2913cc88bd",
  "topic 16": "pos=269.5,-84.5 size=104x47 order=0 group=03b4891c6fac line=de5d7714eb41",
  "topic 17": "pos=386,-135 size=69x34 order=0 group=d2c7b79c2078 line=c50b7a380f4e",
  "topic 18": "pos=403,-62.5 size=103x34 order=1 group=70d8803fb5d5 line=38d593fc549c",
  "topic 19": "pos=519,-91 size=69x34 order=0 group=0051323de508 line=da0bf20a8508",
  "topic 2": "pos=224,-459 size=63x34 order=0 group=0c07ca952e7c line=d108c69ff446",
  "topic 20": "pos=536.5,-40.5 size=104x47 order=1 group=8c34cd2ef5af line=7e0f38d42177",
  "topic 21": "pos=252,44.5 size=69x34 order=1 group=43fb1f13c536 line=3c50a5b9700a",
  "topic 22": "pos=376.5,22.5 size=120x59 order=0 group=f640ec9dcef6 line=0224651a05b1",
  "topic 23": "pos=419.5,79 size=206x34 order=1 group=a7ace6535c0f line=d8bd9e684d76",
  "topic 24": "pos=278,145 size=121x47 order=2 group=1662b67591a3 line=25c3958b8679",
  "topic 25": "pos=411.5,123 size=86x34 order=0 group=ae346347e29c line=64f7b46932a0",
  "topic 26": "pos=403,167 size=69x34 order=1 group=41c0af20b43b line=4ba4b0eca8ed",
  "topic 27": "pos=139.5,374.5 size=96x38 order=4 group=05cb1e8ef1d2 line=77fb832b455a",
  "topic 28": "pos=261,261.5 size=87x47 order=0 group=b5e42a129f00 line=823cfe77f0f8",
  "topic 29": "pos=369,211 size=69x34 order=0 group=b6422233b3a6 line=8f105703b178",
  "topic 3": "pos=385.5,-509.5 size=200x34 order=0 group=b08fa23ea8c1 line=e714c935824d",
  "topic 30": "pos=386,283.5 size=103x34 order=1 group=463f4773cec4 line=1a5ca46a5393",
  "topic 31": "pos=502,255 size=69x34 order=0 group=d70d9dcf87aa line=168225236460",
  "topic 32": "pos=519.5,305.5 size=104x47 order=1 group=a52df76a00de line=61996460fb89",
  "topic 33": "pos=396.5,403 size=358x59 order=1 group=abf9a5c7791b line=eb0e8defb960",
  "topic 34": "pos=665.5,368.5 size=120x59 order=0 group=a069dc8f1e7b line=fe61fe3424ae",
  "topic 35": "pos=680.5,437.5 size=150x59 order=1 group=b5fa22e1003c line=b26c7f697add",
  "topic 36": "pos=278,516 size=121x47 order=2 group=65949bdf4d83 line=6647961e8ec0",
  "topic 37": "pos=403,494 size=69x34 order=0 group=43e0fff0cd87 line=0e71c6e40e64",
  "topic 38": "pos=403,538 size=69x34 order=1 group=b01fb7115912 line=147712eee351",
  "topic 39": "pos=-130.5,-363.5 size=78x38 order=1 group=ffd8bab64811 line=c80c763f6b44",
  "topic 4": "pos=559,-531.5 size=87x47 order=0 group=07fc08428bbe line=08c8bcac7db2",
  "topic 40": "pos=-260,-451.5 size=121x47 order=0 group=a8912b390658 line=fe731b955e22",
  "topic 41": "pos=-385,-519.5 size=69x34 order=0 group=b6380e65cb89 line=b970b6d06c78",
  "topic 42": "pos=-393.5,-429.5 size=86x34 order=1 group=34a4452483de line=994b871f040a",
  "topic 43": "pos=-569.5,-475.5 size=206x34 order=0 group=5facdd8cd421 line=aa9fde11fa61",
  "topic 44": "pos=-542,-407.5 size=151x82 order=1 group=1fb55f5b7632 line=5f52dbfa4cc9",
  "topic 45": "pos=-251,-317.5 size=103x34 order=1 group=654c287ddb82 line=b28d5ef14bda",
  "topic 46": "pos=-367,-339.5 size=69x34 order=0 group=b9e0edf34cac line=b4651071d978",
  "topic 47": "pos=-367,-295.5 size=69x34 order=1 group=bf6e7a4dde46 line=0979d9a799c6",
  "topic 48": "pos=-260,-229.5 size=121x47 order=2 group=a8362d9399ae line=65019caca6dd",
  "topic 49": "pos=-385,-251.5 size=69x34 order=0 group=460ef35fc265 line=ac516c8aef4b",
  "topic 5": "pos=555.5,-481 size=80x34 order=1 group=2ad76018527d line=a346059ae60a",
  "topic 50": "pos=-393.5,-207.5 size=86x34 order=1 group=05f538a517fa line=adf1c8aab403",
  "topic 500": "pos=600,500 size=69x34 order=undefined group=2b507e91f8ee line=da39a3ee5e6b",
  "topic 51": "pos=-130.5,-12.5 size=78x38 order=3 group=313bdd74ed9d line=6cc1d9f5e8a9",
  "topic 52": "pos=-243,-100.5 size=87x47 order=0 group=ada936c770df line=98f97abfc7b2",
  "topic 53": "pos=-419.5,-163.5 size=206x34 order=0 group=5c56f9dcc6a1 line=3dfce46097ba",
  "topic 54": "pos=-368,-78.5 size=103x34 order=1 group=627c418390e8 line=72c9816b0d39",
  "topic 55": "pos=-524.5,-107 size=150x59 order=0 group=43dfae4b3109 line=9f2138376c57",
  "topic 56": "pos=-501.5,-44 size=104x47 order=1 group=2521a9caf5dd line=2e418fc822d4",
  "topic 57": "pos=-234,28.5 size=69x34 order=1 group=b1e71cdea12d line=f4533bc67df3",
  "topic 58": "pos=-333,6.5 size=69x34 order=0 group=97cdced574e7 line=5ce9916f3b11",
  "topic 59": "pos=-333,50.5 size=69x34 order=1 group=6b53764477dc line=05d7fbd4808f",
  "topic 6": "pos=325.5,-408.5 size=80x34 order=1 group=009ee2f1d758 line=6b11ac129a31",
  "topic 60": "pos=-260,116.5 size=121x47 order=2 group=88d5c396b0a9 line=e59c31fa78f8",
  "topic 61": "pos=-385,94.5 size=69x34 order=0 group=05e8da57cd9b line=00446c0e5922",
  "topic 62": "pos=-385,138.5 size=69x34 order=1 group=327459a9dc9b line=fc2823a22fd1",
  "topic 63": "pos=-216,351 size=249x38 order=5 group=b20f463aae4b line=80a20fa71669",
  "topic 64": "pos=-422.5,263 size=104x47 order=0 group=8a792b0d6c4f line=07f539aab19f",
  "topic 65": "pos=-547.5,182.5 size=86x34 order=0 group=615bf0aae251 line=1dfb2c8a995a",
  "topic 66": "pos=-579.5,285 size=150x59 order=1 group=1837dd972122 line=2e011b7fc959",
  "topic 67": "pos=-744.5,239 size=120x59 order=0 group=782c74cab6c4 line=9ae3246c3ad0",
  "topic 68": "pos=-760,319.5 size=151x82 order=1 group=4eb0d17ace25 line=6e0bfb673447",
  "topic 69": "pos=-405,409.5 size=69x34 order=1 group=7e1912011bdf line=1012fd675dd8",
  "topic 7": "pos=427,-437 size=63x34 order=0 group=bd1d124e1bfc line=0e58f4315250",
  "topic 70": "pos=-512.5,387.5 size=86x34 order=0 group=cf93793ebe07 line=be66ca4b7035",
  "topic 71": "pos=-504,431.5 size=69x34 order=1 group=38435c091752 line=ca40c4edd52f",
  "topic 72": "pos=-439.5,497.5 size=138x47 order=2 group=4ece8450d354 line=f342825376f5",
  "topic 73": "pos=-641.5,475.5 size=206x34 order=0 group=88abfc810e04 line=e0b2e1b26408",
  "topic 74": "pos=-573,519.5 size=69x34 order=1 group=9e09df3f8943 line=d47b49308a13",
  "topic 8": "pos=447.5,-386.5 size=104x47 order=1 group=d64d7e44327b line=a32848cd2412",
  "topic 9": "pos=232.5,-301.5 size=80x64 order=1 group=10dbf5e4a3ca line=606a614b8f3e",
}
`;

exports[`redraw render snapshot of a medium map renders the same after toggling the theme variant: light 1`] = `
{
  "canvas": "e677d5bb66ed",
  "topic 0": "pos=0,0 size=123x42 order=undefined group=31b0cded508b line=da39a3ee5e6b",
  "topic 1": "pos=127,-358.5 size=71x38 order=0 group=694223b8f0ba line=73486457fe69",
  "topic 10": "pos=345.5,-336 size=86x34 order=0 group=1a64fc1d9011 line=6491fa4aae55",
  "topic 11": "pos=362.5,-279.5 size=120x59 order=1 group=c4366dce4060 line=ddc66526841e",
  "topic 12": "pos=244.5,-201 size=104x47 order=2 group=6d110f75ffff line=25af9412bf95",
  "topic 13": "pos=429.5,-223 size=206x34 order=0 group=bb29f66b7ede line=53028d0d099d",
  "topic 14": "pos=361,-179 size=69x34 order=1 group=135f07e0c011 line=8574a22699a7",
  "topic 15": "pos=139.5,16 size=96x74 order=2 group=e1d6275420ff line=3d2913cc88bd",
  "topic 16": "pos=269.5,-84.5 size=104x47 order=0 group=03b4891c6fac line=de5d7714eb41",
  "topic 17": "pos=386,-135 size=69x34 order=0 group=d2c7b79c2078 line=c50b7a380f4e",
  "topic 18": "pos=403,-62.5 size=103x34 order=1 group=70d8803fb5d5 line=38d593fc549c",
  "topic 19": "pos=519,-91 size=69x34 order=0 group=0051323de508 line=da0bf20a8508",
  "topic 2": "pos=224,-459 size=63x34 order=0 group=0c07ca952e7c line=d108c69ff446",
  "topic 20": "pos=536.5,-40.5 size=104x47 order=1 group=8c34cd2ef5af line=7e0f38d42177",
  "topic 21": "pos=252,44.5 size=69x34 order=1 group=43fb1f13c536 line=3c50a5b9700a",
  "topic 22": "pos=376.5,22.5 size=120x59 order=0 group=f640ec9dcef6 line=0224651a05b1",
  "topic 23": "pos=419.5,79 size=206x34 order=1 group=a7ace6535c0f line=d8bd9e684d76",
  "topic 24": "pos=278,145 size=121x47 order=2 group=1662b67591a3 line=25c3958b8679",
  "topic 25": "pos=411.5,123 size=86x34 order=0 group=ae346347e29c line=64f7b46932a0",
  "topic 26": "pos=403,167 size=69x34 order=1 group=41c0af20b43b line=4ba4b0eca8ed",
  "topic 27": "pos=139.5,374.5 size=96x38 order=4 group=05cb1e8ef1d2 line=77fb832b455a",
  "topic 28": "pos=261,261.5 size=87x47 order=0 group=b5e42a129f00 line=823cfe77f0f8",
  "topic 29": "pos=369,211 size=69x34 order=0 group=b6422233b3a6 line=8f105703b178",
  "topic 3": "pos=385.5,-509.5 size=200x34 order=0 group=b08fa23ea8c1 line=e714c935824d",
  "topic 30": "pos=386,283.5 size=103x34 order=1 group=463f4773cec4 line=1a5ca46a5393",
  "topic 31": "pos=502,255 size=69x34 order=0 group=d70d9dcf87aa line=168225236460",
  "topic 32": "pos=519.5,305.5 size=104x47 order=1 group=a52df76a00de line=61996460fb89",
  "topic 33": "pos=396.5,403 size=358x59 order=1 group=abf9a5c7791b line=eb0e8defb960",
  "topic 34": "pos=665.5,368.5 size=120x59 order=0 group=a069dc8f1e7b line=fe61fe3424ae",
  "topic 35": "pos=680.5,437.5 size=150x59 order=1 group=b5fa22e1003c line=b26c7f697add",
  "topic 36": "pos=278,516 size=121x47 order=2 group=65949bdf4d83 line=6647961e8ec0",
  "topic 37": "pos=403,494 size=69x34 order=0 group=43e0fff0cd87 line=0e71c6e40e64",
  "topic 38": "pos=403,538 size=69x34 order=1 group=b01fb7115912 line=147712eee351",
  "topic 39": "pos=-130.5,-363.5 size=78x38 order=1 group=ffd8bab64811 line=c80c763f6b44",
  "topic 4": "pos=559,-531.5 size=87x47 order=0 group=07fc08428bbe line=08c8bcac7db2",
  "topic 40": "pos=-260,-451.5 size=121x47 order=0 group=a8912b390658 line=fe731b955e22",
  "topic 41": "pos=-385,-519.5 size=69x34 order=0 group=b6380e65cb89 line=b970b6d06c78",
  "topic 42": "pos=-393.5,-429.5 size=86x34 order=1 group=34a4452483de line=994b871f040a",
  "topic 43": "pos=-569.5,-475.5 size=206x34 order=0 group=5facdd8cd421 line=aa9fde11fa61",
  "topic 44": "pos=-542,-407.5 size=151x82 order=1 group=1fb55f5b7632 line=5f52dbfa4cc9",
  "topic 45": "pos=-251,-317.5 size=103x34 order=1 group=654c287ddb82 line=b28d5ef14bda",
  "topic 46": "pos=-367,-339.5 size=69x34 order=0 group=b9e0edf34cac line=b4651071d978",
  "topic 47": "pos=-367,-295.5 size=69x34 order=1 group=bf6e7a4dde46 line=0979d9a799c6",
  "topic 48": "pos=-260,-229.5 size=121x47 order=2 group=a8362d9399ae line=65019caca6dd",
  "topic 49": "pos=-385,-251.5 size=69x34 order=0 group=460ef35fc265 line=ac516c8aef4b",
  "topic 5": "pos=555.5,-481 size=80x34 order=1 group=2ad76018527d line=a346059ae60a",
  "topic 50": "pos=-393.5,-207.5 size=86x34 order=1 group=05f538a517fa line=adf1c8aab403",
  "topic 500": "pos=600,500 size=69x34 order=undefined group=2b507e91f8ee line=da39a3ee5e6b",
  "topic 51": "pos=-130.5,-12.5 size=78x38 order=3 group=313bdd74ed9d line=6cc1d9f5e8a9",
  "topic 52": "pos=-243,-100.5 size=87x47 order=0 group=ada936c770df line=98f97abfc7b2",
  "topic 53": "pos=-419.5,-163.5 size=206x34 order=0 group=5c56f9dcc6a1 line=3dfce46097ba",
  "topic 54": "pos=-368,-78.5 size=103x34 order=1 group=627c418390e8 line=72c9816b0d39",
  "topic 55": "pos=-524.5,-107 size=150x59 order=0 group=43dfae4b3109 line=9f2138376c57",
  "topic 56": "pos=-501.5,-44 size=104x47 order=1 group=2521a9caf5dd line=2e418fc822d4",
  "topic 57": "pos=-234,28.5 size=69x34 order=1 group=b1e71cdea12d line=f4533bc67df3",
  "topic 58": "pos=-333,6.5 size=69x34 order=0 group=97cdced574e7 line=5ce9916f3b11",
  "topic 59": "pos=-333,50.5 size=69x34 order=1 group=6b53764477dc line=05d7fbd4808f",
  "topic 6": "pos=325.5,-408.5 size=80x34 order=1 group=009ee2f1d758 line=6b11ac129a31",
  "topic 60": "pos=-260,116.5 size=121x47 order=2 group=88d5c396b0a9 line=e59c31fa78f8",
  "topic 61": "pos=-385,94.5 size=69x34 order=0 group=05e8da57cd9b line=00446c0e5922",
  "topic 62": "pos=-385,138.5 size=69x34 order=1 group=327459a9dc9b line=fc2823a22fd1",
  "topic 63": "pos=-216,351 size=249x38 order=5 group=b20f463aae4b line=80a20fa71669",
  "topic 64": "pos=-422.5,263 size=104x47 order=0 group=8a792b0d6c4f line=07f539aab19f",
  "topic 65": "pos=-547.5,182.5 size=86x34 order=0 group=615bf0aae251 line=1dfb2c8a995a",
  "topic 66": "pos=-579.5,285 size=150x59 order=1 group=1837dd972122 line=2e011b7fc959",
  "topic 67": "pos=-744.5,239 size=120x59 order=0 group=782c74cab6c4 line=9ae3246c3ad0",
  "topic 68": "pos=-760,319.5 size=151x82 order=1 group=4eb0d17ace25 line=6e0bfb673447",
  "topic 69": "pos=-405,409.5 size=69x34 order=1 group=7e1912011bdf line=1012fd675dd8",
  "topic 7": "pos=427,-437 size=63x34 order=0 group=bd1d124e1bfc line=0e58f4315250",
  "topic 70": "pos=-512.5,387.5 size=86x34 order=0 group=cf93793ebe07 line=be66ca4b7035",
  "topic 71": "pos=-504,431.5 size=69x34 order=1 group=38435c091752 line=ca40c4edd52f",
  "topic 72": "pos=-439.5,497.5 size=138x47 order=2 group=4ece8450d354 line=f342825376f5",
  "topic 73": "pos=-641.5,475.5 size=206x34 order=0 group=88abfc810e04 line=e0b2e1b26408",
  "topic 74": "pos=-573,519.5 size=69x34 order=1 group=9e09df3f8943 line=d47b49308a13",
  "topic 8": "pos=447.5,-386.5 size=104x47 order=1 group=d64d7e44327b line=a32848cd2412",
  "topic 9": "pos=232.5,-301.5 size=80x64 order=1 group=10dbf5e4a3ca line=606a614b8f3e",
}
`;

exports[`redraw render snapshot of a medium map renders the same while typing in the text editor and after committing: committed 1`] = `
{
  "canvas": "3b6f1f4f73c7",
  "topic 0": "pos=0,0 size=123x42 order=undefined group=31b0cded508b line=da39a3ee5e6b",
  "topic 1": "pos=127,-358.5 size=71x38 order=0 group=694223b8f0ba line=73486457fe69",
  "topic 10": "pos=345.5,-336 size=86x34 order=0 group=1a64fc1d9011 line=6491fa4aae55",
  "topic 11": "pos=362.5,-279.5 size=120x59 order=1 group=c4366dce4060 line=ddc66526841e",
  "topic 12": "pos=244.5,-201 size=104x47 order=2 group=6d110f75ffff line=25af9412bf95",
  "topic 13": "pos=429.5,-223 size=206x34 order=0 group=bb29f66b7ede line=53028d0d099d",
  "topic 14": "pos=361,-179 size=69x34 order=1 group=135f07e0c011 line=8574a22699a7",
  "topic 15": "pos=139.5,16 size=96x74 order=2 group=e1d6275420ff line=3d2913cc88bd",
  "topic 16": "pos=269.5,-84.5 size=104x47 order=0 group=03b4891c6fac line=de5d7714eb41",
  "topic 17": "pos=386,-135 size=69x34 order=0 group=d2c7b79c2078 line=c50b7a380f4e",
  "topic 18": "pos=403,-62.5 size=103x34 order=1 group=70d8803fb5d5 line=38d593fc549c",
  "topic 19": "pos=519,-91 size=69x34 order=0 group=0051323de508 line=da0bf20a8508",
  "topic 2": "pos=257,-459 size=129x47 order=0 group=51e10c950542 line=0d2735e3a1c1",
  "topic 20": "pos=536.5,-40.5 size=104x47 order=1 group=8c34cd2ef5af line=7e0f38d42177",
  "topic 21": "pos=252,44.5 size=69x34 order=1 group=43fb1f13c536 line=3c50a5b9700a",
  "topic 22": "pos=376.5,22.5 size=120x59 order=0 group=f640ec9dcef6 line=0224651a05b1",
  "topic 23": "pos=419.5,79 size=206x34 order=1 group=a7ace6535c0f line=d8bd9e684d76",
  "topic 24": "pos=278,145 size=121x47 order=2 group=1662b67591a3 line=25c3958b8679",
  "topic 25": "pos=411.5,123 size=86x34 order=0 group=ae346347e29c line=64f7b46932a0",
  "topic 26": "pos=403,167 size=69x34 order=1 group=41c0af20b43b line=4ba4b0eca8ed",
  "topic 27": "pos=139.5,374.5 size=96x38 order=4 group=05cb1e8ef1d2 line=77fb832b455a",
  "topic 28": "pos=261,261.5 size=87x47 order=0 group=b5e42a129f00 line=823cfe77f0f8",
  "topic 29": "pos=369,211 size=69x34 order=0 group=b6422233b3a6 line=8f105703b178",
  "topic 3": "pos=451.5,-509.5 size=200x34 order=0 group=92a0ca5305b3 line=8518ec418f89",
  "topic 30": "pos=386,283.5 size=103x34 order=1 group=463f4773cec4 line=1a5ca46a5393",
  "topic 31": "pos=502,255 size=69x34 order=0 group=d70d9dcf87aa line=168225236460",
  "topic 32": "pos=519.5,305.5 size=104x47 order=1 group=a52df76a00de line=61996460fb89",
  "topic 33": "pos=396.5,403 size=358x59 order=1 group=abf9a5c7791b line=eb0e8defb960",
  "topic 34": "pos=665.5,368.5 size=120x59 order=0 group=a069dc8f1e7b line=fe61fe3424ae",
  "topic 35": "pos=680.5,437.5 size=150x59 order=1 group=b5fa22e1003c line=b26c7f697add",
  "topic 36": "pos=278,516 size=121x47 order=2 group=65949bdf4d83 line=6647961e8ec0",
  "topic 37": "pos=403,494 size=69x34 order=0 group=43e0fff0cd87 line=0e71c6e40e64",
  "topic 38": "pos=403,538 size=69x34 order=1 group=b01fb7115912 line=147712eee351",
  "topic 39": "pos=-130.5,-363.5 size=78x38 order=1 group=ffd8bab64811 line=c80c763f6b44",
  "topic 4": "pos=625,-531.5 size=87x47 order=0 group=7fbee138f84c line=9595749ffe8c",
  "topic 40": "pos=-260,-451.5 size=121x47 order=0 group=a8912b390658 line=fe731b955e22",
  "topic 41": "pos=-385,-519.5 size=69x34 order=0 group=b6380e65cb89 line=b970b6d06c78",
  "topic 42": "pos=-393.5,-429.5 size=86x34 order=1 group=34a4452483de line=994b871f040a",
  "topic 43": "pos=-569.5,-475.5 size=206x34 order=0 group=5facdd8cd421 line=aa9fde11fa61",
  "topic 44": "pos=-542,-407.5 size=151x82 order=1 group=1fb55f5b7632 line=5f52dbfa4cc9",
  "topic 45": "pos=-251,-317.5 size=103x34 order=1 group=654c287ddb82 line=b28d5ef14bda",
  "topic 46": "pos=-367,-339.5 size=69x34 order=0 group=b9e0edf34cac line=b4651071d978",
  "topic 47": "pos=-367,-295.5 size=69x34 order=1 group=bf6e7a4dde46 line=0979d9a799c6",
  "topic 48": "pos=-260,-229.5 size=121x47 order=2 group=a8362d9399ae line=65019caca6dd",
  "topic 49": "pos=-385,-251.5 size=69x34 order=0 group=460ef35fc265 line=ac516c8aef4b",
  "topic 5": "pos=621.5,-481 size=80x34 order=1 group=7e4467c4156d line=93ec2d28f4b4",
  "topic 50": "pos=-393.5,-207.5 size=86x34 order=1 group=05f538a517fa line=adf1c8aab403",
  "topic 500": "pos=600,500 size=69x34 order=undefined group=2b507e91f8ee line=da39a3ee5e6b",
  "topic 51": "pos=-130.5,-12.5 size=78x38 order=3 group=313bdd74ed9d line=6cc1d9f5e8a9",
  "topic 52": "pos=-243,-100.5 size=87x47 order=0 group=ada936c770df line=98f97abfc7b2",
  "topic 53": "pos=-419.5,-163.5 size=206x34 order=0 group=5c56f9dcc6a1 line=3dfce46097ba",
  "topic 54": "pos=-368,-78.5 size=103x34 order=1 group=627c418390e8 line=72c9816b0d39",
  "topic 55": "pos=-524.5,-107 size=150x59 order=0 group=43dfae4b3109 line=9f2138376c57",
  "topic 56": "pos=-501.5,-44 size=104x47 order=1 group=2521a9caf5dd line=2e418fc822d4",
  "topic 57": "pos=-234,28.5 size=69x34 order=1 group=b1e71cdea12d line=f4533bc67df3",
  "topic 58": "pos=-333,6.5 size=69x34 order=0 group=97cdced574e7 line=5ce9916f3b11",
  "topic 59": "pos=-333,50.5 size=69x34 order=1 group=6b53764477dc line=05d7fbd4808f",
  "topic 6": "pos=391.5,-408.5 size=80x34 order=1 group=5e6dcbe46b2c line=8e2d05639f3e",
  "topic 60": "pos=-260,116.5 size=121x47 order=2 group=88d5c396b0a9 line=e59c31fa78f8",
  "topic 61": "pos=-385,94.5 size=69x34 order=0 group=05e8da57cd9b line=00446c0e5922",
  "topic 62": "pos=-385,138.5 size=69x34 order=1 group=327459a9dc9b line=fc2823a22fd1",
  "topic 63": "pos=-216,351 size=249x38 order=5 group=b20f463aae4b line=80a20fa71669",
  "topic 64": "pos=-422.5,263 size=104x47 order=0 group=8a792b0d6c4f line=07f539aab19f",
  "topic 65": "pos=-547.5,182.5 size=86x34 order=0 group=615bf0aae251 line=1dfb2c8a995a",
  "topic 66": "pos=-579.5,285 size=150x59 order=1 group=1837dd972122 line=2e011b7fc959",
  "topic 67": "pos=-744.5,239 size=120x59 order=0 group=782c74cab6c4 line=9ae3246c3ad0",
  "topic 68": "pos=-760,319.5 size=151x82 order=1 group=4eb0d17ace25 line=6e0bfb673447",
  "topic 69": "pos=-405,409.5 size=69x34 order=1 group=7e1912011bdf line=1012fd675dd8",
  "topic 7": "pos=493,-437 size=63x34 order=0 group=657364efae65 line=3bea03130094",
  "topic 70": "pos=-512.5,387.5 size=86x34 order=0 group=cf93793ebe07 line=be66ca4b7035",
  "topic 71": "pos=-504,431.5 size=69x34 order=1 group=38435c091752 line=ca40c4edd52f",
  "topic 72": "pos=-439.5,497.5 size=138x47 order=2 group=4ece8450d354 line=f342825376f5",
  "topic 73": "pos=-641.5,475.5 size=206x34 order=0 group=88abfc810e04 line=e0b2e1b26408",
  "topic 74": "pos=-573,519.5 size=69x34 order=1 group=9e09df3f8943 line=d47b49308a13",
  "topic 8": "pos=513.5,-386.5 size=104x47 order=1 group=32c3cc78d155 line=0c42a27e86dc",
  "topic 9": "pos=232.5,-301.5 size=80x64 order=1 group=10dbf5e4a3ca line=606a614b8f3e",
}
`;

exports[`redraw render snapshot of a medium map renders the same while typing in the text editor and after committing: typing 1`] = `
{
  "canvas": "1c02e9948108",
  "topic 0": "pos=0,0 size=123x42 order=undefined group=31b0cded508b line=da39a3ee5e6b",
  "topic 1": "pos=127,-358.5 size=71x38 order=0 group=694223b8f0ba line=73486457fe69",
  "topic 10": "pos=345.5,-336 size=86x34 order=0 group=1a64fc1d9011 line=6491fa4aae55",
  "topic 11": "pos=362.5,-279.5 size=120x59 order=1 group=c4366dce4060 line=ddc66526841e",
  "topic 12": "pos=244.5,-201 size=104x47 order=2 group=6d110f75ffff line=25af9412bf95",
  "topic 13": "pos=429.5,-223 size=206x34 order=0 group=bb29f66b7ede line=53028d0d099d",
  "topic 14": "pos=361,-179 size=69x34 order=1 group=135f07e0c011 line=8574a22699a7",
  "topic 15": "pos=139.5,16 size=96x74 order=2 group=e1d6275420ff line=3d2913cc88bd",
  "topic 16": "pos=269.5,-84.5 size=104x47 order=0 group=03b4891c6fac line=de5d7714eb41",
  "topic 17": "pos=386,-135 size=69x34 order=0 group=d2c7b79c2078 line=c50b7a380f4e",
  "topic 18": "pos=403,-62.5 size=103x34 order=1 group=70d8803fb5d5 line=38d593fc549c",
  "topic 19": "pos=519,-91 size=69x34 order=0 group=0051323de508 line=da0bf20a8508",
  "topic 2": "pos=257,-459 size=129x47 order=0 group=d04f8e4ca4b4 line=0d2735e3a1c1",
  "topic 20": "pos=536.5,-40.5 size=104x47 order=1 group=8c34cd2ef5af line=7e0f38d42177",
  "topic 21": "pos=252,44.5 size=69x34 order=1 group=43fb1f13c536 line=3c50a5b9700a",
  "topic 22": "pos=376.5,22.5 size=120x59 order=0 group=f640ec9dcef6 line=0224651a05b1",
  "topic 23": "pos=419.5,79 size=206x34 order=1 group=a7ace6535c0f line=d8bd9e684d76",
  "topic 24": "pos=278,145 size=121x47 order=2 group=1662b67591a3 line=25c3958b8679",
  "topic 25": "pos=411.5,123 size=86x34 order=0 group=ae346347e29c line=64f7b46932a0",
  "topic 26": "pos=403,167 size=69x34 order=1 group=41c0af20b43b line=4ba4b0eca8ed",
  "topic 27": "pos=139.5,374.5 size=96x38 order=4 group=05cb1e8ef1d2 line=77fb832b455a",
  "topic 28": "pos=261,261.5 size=87x47 order=0 group=b5e42a129f00 line=823cfe77f0f8",
  "topic 29": "pos=369,211 size=69x34 order=0 group=b6422233b3a6 line=8f105703b178",
  "topic 3": "pos=451.5,-509.5 size=200x34 order=0 group=92a0ca5305b3 line=8518ec418f89",
  "topic 30": "pos=386,283.5 size=103x34 order=1 group=463f4773cec4 line=1a5ca46a5393",
  "topic 31": "pos=502,255 size=69x34 order=0 group=d70d9dcf87aa line=168225236460",
  "topic 32": "pos=519.5,305.5 size=104x47 order=1 group=a52df76a00de line=61996460fb89",
  "topic 33": "pos=396.5,403 size=358x59 order=1 group=abf9a5c7791b line=eb0e8defb960",
  "topic 34": "pos=665.5,368.5 size=120x59 order=0 group=a069dc8f1e7b line=fe61fe3424ae",
  "topic 35": "pos=680.5,437.5 size=150x59 order=1 group=b5fa22e1003c line=b26c7f697add",
  "topic 36": "pos=278,516 size=121x47 order=2 group=65949bdf4d83 line=6647961e8ec0",
  "topic 37": "pos=403,494 size=69x34 order=0 group=43e0fff0cd87 line=0e71c6e40e64",
  "topic 38": "pos=403,538 size=69x34 order=1 group=b01fb7115912 line=147712eee351",
  "topic 39": "pos=-130.5,-363.5 size=78x38 order=1 group=ffd8bab64811 line=c80c763f6b44",
  "topic 4": "pos=625,-531.5 size=87x47 order=0 group=7fbee138f84c line=9595749ffe8c",
  "topic 40": "pos=-260,-451.5 size=121x47 order=0 group=a8912b390658 line=fe731b955e22",
  "topic 41": "pos=-385,-519.5 size=69x34 order=0 group=b6380e65cb89 line=b970b6d06c78",
  "topic 42": "pos=-393.5,-429.5 size=86x34 order=1 group=34a4452483de line=994b871f040a",
  "topic 43": "pos=-569.5,-475.5 size=206x34 order=0 group=5facdd8cd421 line=aa9fde11fa61",
  "topic 44": "pos=-542,-407.5 size=151x82 order=1 group=1fb55f5b7632 line=5f52dbfa4cc9",
  "topic 45": "pos=-251,-317.5 size=103x34 order=1 group=654c287ddb82 line=b28d5ef14bda",
  "topic 46": "pos=-367,-339.5 size=69x34 order=0 group=b9e0edf34cac line=b4651071d978",
  "topic 47": "pos=-367,-295.5 size=69x34 order=1 group=bf6e7a4dde46 line=0979d9a799c6",
  "topic 48": "pos=-260,-229.5 size=121x47 order=2 group=a8362d9399ae line=65019caca6dd",
  "topic 49": "pos=-385,-251.5 size=69x34 order=0 group=460ef35fc265 line=ac516c8aef4b",
  "topic 5": "pos=621.5,-481 size=80x34 order=1 group=7e4467c4156d line=93ec2d28f4b4",
  "topic 50": "pos=-393.5,-207.5 size=86x34 order=1 group=05f538a517fa line=adf1c8aab403",
  "topic 500": "pos=600,500 size=69x34 order=undefined group=2b507e91f8ee line=da39a3ee5e6b",
  "topic 51": "pos=-130.5,-12.5 size=78x38 order=3 group=313bdd74ed9d line=6cc1d9f5e8a9",
  "topic 52": "pos=-243,-100.5 size=87x47 order=0 group=ada936c770df line=98f97abfc7b2",
  "topic 53": "pos=-419.5,-163.5 size=206x34 order=0 group=5c56f9dcc6a1 line=3dfce46097ba",
  "topic 54": "pos=-368,-78.5 size=103x34 order=1 group=627c418390e8 line=72c9816b0d39",
  "topic 55": "pos=-524.5,-107 size=150x59 order=0 group=43dfae4b3109 line=9f2138376c57",
  "topic 56": "pos=-501.5,-44 size=104x47 order=1 group=2521a9caf5dd line=2e418fc822d4",
  "topic 57": "pos=-234,28.5 size=69x34 order=1 group=b1e71cdea12d line=f4533bc67df3",
  "topic 58": "pos=-333,6.5 size=69x34 order=0 group=97cdced574e7 line=5ce9916f3b11",
  "topic 59": "pos=-333,50.5 size=69x34 order=1 group=6b53764477dc line=05d7fbd4808f",
  "topic 6": "pos=391.5,-408.5 size=80x34 order=1 group=5e6dcbe46b2c line=8e2d05639f3e",
  "topic 60": "pos=-260,116.5 size=121x47 order=2 group=88d5c396b0a9 line=e59c31fa78f8",
  "topic 61": "pos=-385,94.5 size=69x34 order=0 group=05e8da57cd9b line=00446c0e5922",
  "topic 62": "pos=-385,138.5 size=69x34 order=1 group=327459a9dc9b line=fc2823a22fd1",
  "topic 63": "pos=-216,351 size=249x38 order=5 group=b20f463aae4b line=80a20fa71669",
  "topic 64": "pos=-422.5,263 size=104x47 order=0 group=8a792b0d6c4f line=07f539aab19f",
  "topic 65": "pos=-547.5,182.5 size=86x34 order=0 group=615bf0aae251 line=1dfb2c8a995a",
  "topic 66": "pos=-579.5,285 size=150x59 order=1 group=1837dd972122 line=2e011b7fc959",
  "topic 67": "pos=-744.5,239 size=120x59 order=0 group=782c74cab6c4 line=9ae3246c3ad0",
  "topic 68": "pos=-760,319.5 size=151x82 order=1 group=4eb0d17ace25 line=6e0bfb673447",
  "topic 69": "pos=-405,409.5 size=69x34 order=1 group=7e1912011bdf line=1012fd675dd8",
  "topic 7": "pos=493,-437 size=63x34 order=0 group=657364efae65 line=3bea03130094",
  "topic 70": "pos=-512.5,387.5 size=86x34 order=0 group=cf93793ebe07 line=be66ca4b7035",
  "topic 71": "pos=-504,431.5 size=69x34 order=1 group=38435c091752 line=ca40c4edd52f",
  "topic 72": "pos=-439.5,497.5 size=138x47 order=2 group=4ece8450d354 line=f342825376f5",
  "topic 73": "pos=-641.5,475.5 size=206x34 order=0 group=88abfc810e04 line=e0b2e1b26408",
  "topic 74": "pos=-573,519.5 size=69x34 order=1 group=9e09df3f8943 line=d47b49308a13",
  "topic 8": "pos=513.5,-386.5 size=104x47 order=1 group=32c3cc78d155 line=0c42a27e86dc",
  "topic 9": "pos=232.5,-301.5 size=80x64 order=1 group=10dbf5e4a3ca line=606a614b8f3e",
}
`;
